chore: pull translation from crowdin

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -28,10 +28,10 @@
   "viewMenuToggleFullScreen": "غيِر الى كل الشاشة",
   "viewMenuToggleDevTools": "اِذهب إلى أدوات المطور",
   "contextMenuNoSuggestions": "لا اقتراحات",
-  "openGroupInvitation": "Community invitation",
+  "openGroupInvitation": "دعوة المجتمع",
   "joinOpenGroupAfterInvitationConfirmationTitle": "انضَم إلى $roomName$؟",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "هل أنت متحقِّق أنك تريد الانضمام إلى المجموعة المفتوحة $roomName$؟",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "أدخل عنوان التعريف أو اسم ONS",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "جاري التحميل",
@@ -40,7 +40,7 @@
   "youGotKickedFromGroup": "تم اِلغائك من المجموعة.",
   "unreadMessages": "الرسائل غير المقروءة",
   "debugLogExplanation": "السجل سوف يُحفظ على سطح مكتبك",
-  "reportIssue": "Report a Bug",
+  "reportIssue": "الإبلاغ عن خطأ",
   "markAllAsRead": "تحديد الكل كمقروء",
   "incomingError": "خطأ في معالجة الرسالة الواردة",
   "media": "الوسائط",
@@ -72,7 +72,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "جهات الاتصال و المجموعات",
   "contactsHeader": "جهات الإتصال",
-  "messagesHeader": "الرسائل",
+  "messagesHeader": "Conversations",
   "settingsHeader": "التعديلات",
   "typingAlt": "مؤثرات الكتابة لهذه المحادثة",
   "contactAvatarAlt": "صورة المتصل $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "هل تريد حذف هذه الرسالة ؟",
   "deleteMessages": "حذف الرسائل",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "تم حذف هذه الرسالة",
   "from": "مِن",
@@ -107,29 +108,30 @@
   "sent": "أُرسلت",
   "received": "استُقبلت",
   "sendMessage": "أرسل رسالة",
-  "groupMembers": "أفراد المجموعة",
+  "groupMembers": "الأعضاء",
   "moreInformation": "المزيد من المعلومات",
   "resend": "ارسل مجددا",
   "deleteConversationConfirmation": "حذف المحادثة بصفة نهائية ؟",
   "clear": "Clear",
   "clearAllData": "اِمسح جميع البيانات",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "هل أنت متأكد من حذفك المحادثة؟",
   "quoteThumbnailAlt": "الصورة المصغرة للصورة من الرسالة المقتبسة",
   "imageAttachmentAlt": "صورة مرفقة بالرسالة",
-  "videoAttachmentAlt": "لقطة شاشة للفيديو المرفق بالرسالة",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "تم ارسال الصورة للمحادثة",
   "imageCaptionIconAlt": "أيقونة تظهر أن للصورة تعليق",
   "addACaption": "أضف تعليق...",
   "copySessionID": "اِنسخ رابط التعريف",
-  "copyOpenGroupURL": "اِنسخ رابط المجموعة",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "حفظ",
   "saveLogToDesktop": "اِحفظ السجل على سطح المكتب",
   "saved": "تم الحفظ",
   "tookAScreenshot": "قام $name$ بتصوير الشاشة",
   "savedTheFile": "قام $name$ بحفظ الوسائط",
   "linkPreviewsTitle": "أرسل معاينات الرابط",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "لن يكون لديك حماية كاملة للبيانات الوصفية عند إرسال معاينات الرابط.",
   "mediaPermissionsTitle": "ميكروفون",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "مؤشرات الكتابة",
   "zoomFactorSettingTitle": "عامل التكبير",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,17 +157,17 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "الاسم والرسالة",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "لا الاسم ولا الرسالة",
   "nameOnly": "اسم المُرسِل فقط",
   "newMessage": "رسالة جديدة",
   "createConversationNewContact": "Create a conversation with a new contact",
   "createConversationNewGroup": "Create a group with existing contacts",
-  "joinACommunity": "Join a community",
+  "joinACommunity": "انضم إلى مُجتمع",
   "chooseAnAction": "Choose an action to start a conversation",
   "newMessages": "رسائل جديدة",
   "notificationMostRecentFrom": "Most recent from:",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 ساعة",
   "timerOption_1_day": "1 يوم",
   "timerOption_1_week": "1 أسبوع",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "الرسائل المختفية",
   "changeNickname": "غَير الاسم",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12سا",
   "timerOption_1_day_abbreviated": "1يوم",
   "timerOption_1_week_abbreviated": "1أسبوع",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "تم تعطيل الرسائل المختفية",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "تم تحديد المؤقت على $time$",
   "noteToSelf": "ملاحظة لنفسي",
   "hideMenuBarTitle": "إخفاء شريط القائمة",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start new conversation…",
-  "invalidNumberError": "رقم خاطئ ",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "فشل في حل اسم ONS",
   "autoUpdateSettingTitle": "تحديث تلقائي",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ joined the group",
   "kickedFromTheGroup": "تمت إزالة $name$ من المجموعة.",
   "multipleKickedFromTheGroup": "$name$ تم اِلغاءهم من المجموعة.",
-  "blockUser": "اِحظَر",
-  "unblockUser": "الغاء الحظر",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "تم الغاء الحظر",
   "blocked": "تم الحظر",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "جارٍ تحديث $name$...",
   "showRecoveryPhrase": "جملة الاسترجاع",
   "yourSessionID": "عنوان تعريفك",
-  "setAccountPasswordTitle": "فَعِل كلمة مرور للحساب",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "غَيٍر كلمة مرور الحساب",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "أَلغي كلمة مرور الحساب",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "إدخل كلمة المرور من فضلك",
   "confirmPassword": "أَكِد كلمة المرور",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "أَدخِل كلمة المرور من فضلك",
   "recoveryPhraseSavePromptMain": "عبارة الاسترجاع هي مفتاح عنوان تعريفك - يمكنك استخدامها لاسترجاع عنوان تعريفك اذا فقدت الوصول لجهازك. قم بحفظها في مكان امن و لا تعطها الى اي أحد.",
   "invalidOpenGroupUrl": "عنوان تعريف خاطئ",
-  "copiedToClipboard": "تم النسخ الى الحافظة المؤقتة",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "كلمة المرور",
   "setPassword": "عَيٍن كلمة المرور",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "كلمتا المرور لا تتطابقان",
   "changePasswordInvalid": "كلمة المرور القديمة خاطئة",
   "removePasswordInvalid": "كلمة المرور خاطئة",
-  "setPasswordTitle": "عَيٍن كلمة المرور",
-  "changePasswordTitle": "تم تغيير كلمة المرور",
-  "removePasswordTitle": "تم الغاء كلمة المرور",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "تم تعيين كلمة المرور. احفظها في مامن من فضلك.",
   "changePasswordToastDescription": "تم تغيير كلمة المرور. احفظها في مامن.",
-  "removePasswordToastDescription": "لقد قمت بالغاء كلمة المرور.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "يتم الاتصال...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "المظهر",
   "privacySettingsTitle": "الخصوصية",
   "notificationsSettingsTitle": "التنبيهات",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "ادخل عبارة الاسترجاع",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ عضو",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "ادخل إسم مجموعة أقصر من فضلك",
   "pickClosedGroupMember": "اختر عضو واحد على الاقل من فضلك",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "لا يوجد متصلين محظورين",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "أو انضم إلى واحدة من...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "هل انت متأكد من تنزيل الوسيط المرسل من طرف $name$؟",
   "pinConversation": "ثَبِت المحادثة",
   "unpinConversation": "ألغِي تثبيت المحادثة",
+  "markUnread": "Mark Unread",
   "showUserDetails": "اظهر تفاصيل المستخدم",
   "sendRecoveryPhraseTitle": "أرسل جملة الاسترجاع",
   "sendRecoveryPhraseMessage": "انت تحاول ارسال جملة الاسترجاع التي تسمح بالوصول للحساب. متاكد من ارسالها؟",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "هل تريد حذف البيانات فقط من هذا الجهاز؟",
   "dialogClearAllDataDeletionFailedMultiple": "البيانات لم تحذف من هذه الخوادم: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "مل انت متاكد من حذف بيانات جهازك فقط؟",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "مكالمة لم يتم الرد عليها من '$name$' بسبب عدم تفعيل صلاحيات 'مكالمات الصوت و الفيديو' في تعديلات الخصوصية.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "لقد قمت بالاتصال ب $name$",
   "answeredACall": "اتصال مع $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
