--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Включване в $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Загрузка...",
@@ -72,7 +72,7 @@
   "noSearchResults": "Результаты не найдены для \"$searchTerm$\"",
   "conversationsHeader": "Контакти и Групи",
   "contactsHeader": "Контакты",
-  "messagesHeader": "Сообщения",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Настройки",
   "typingAlt": "Анимация набора текста для этого разговора",
   "contactAvatarAlt": "Аватар для контакта $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Изтрийте $count$ съобщения?",
   "deleteMessageQuestion": "Изтриване на това съобщение?",
   "deleteMessages": "Удалить сообщения",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ изтрити",
   "messageDeletedPlaceholder": "Това съобщение беше изтрито",
   "from": "От:",
@@ -107,29 +108,30 @@
   "sent": "Отправлено",
   "received": "Получено",
   "sendMessage": "Отправить сообщение",
-  "groupMembers": "Участники группы",
+  "groupMembers": "Members",
   "moreInformation": "Больше информации",
   "resend": "Отправить ещё раз",
   "deleteConversationConfirmation": "Удалить этот разговор без возможности восстановления?",
   "clear": "Clear",
   "clearAllData": "Очистить все данные",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Вы уверены, что хотите удалить этот разговор?",
   "quoteThumbnailAlt": "Миниатюра изображения из цитируемого сообщения",
   "imageAttachmentAlt": "Изображение, прикрепленное к сообщению",
-  "videoAttachmentAlt": "Скриншот видео, прикрепленного к сообщению",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Изображение, отправленное в разговоре",
   "imageCaptionIconAlt": "Иконка, показывающая, что у этого изображения есть подпись",
   "addACaption": "Добавить субтитры...",
   "copySessionID": "Копирайте Session ID",
-  "copyOpenGroupURL": "Копирайте URL адреса на групата",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Сохранить",
   "saveLogToDesktop": "Запази лога на работния плот",
   "saved": "Запазено",
   "tookAScreenshot": "$name$ направи екранна снимка",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Отправлять Предпросмотр Ссылки",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Микрофон",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Индикаторы Ввода",
   "zoomFactorSettingTitle": "Масштабирование Приложения",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "И имя отправителя, и сообщение",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Ни имени, ни сообщения",
   "nameOnly": "Только имя отправителя",
   "newMessage": "Новое сообщение",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 часов",
   "timerOption_1_day": "1 день",
   "timerOption_1_week": "1 неделя",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Исчезающие сообщения",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12ч",
   "timerOption_1_day_abbreviated": "1д",
   "timerOption_1_week_abbreviated": "1нед.",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Исчезающие сообщения отключены",
-  "disabledDisappearingMessages": "$name$ отключил(а) исчезающие сообщения.",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Вы отключили исчезающие сообщения.",
   "timerSetTo": "Время исчезновения сообщений – $time$",
   "noteToSelf": "Заметка для себя",
   "hideMenuBarTitle": "Спрятать Системное Меню",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Начать новый разговор…",
-  "invalidNumberError": "Неверный номер",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Автоматические обновления",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$name$ присоединились к группе.",
   "kickedFromTheGroup": "$name$ was removed from the group.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Заблокировать",
-  "unblockUser": "Разблокировать",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Unblocked",
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Обновляем $name$...",
   "showRecoveryPhrase": "Секретная фраза",
   "yourSessionID": "Ваш Session ID",
-  "setAccountPasswordTitle": "Установить Пароль",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Изменить Пароль",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Удалить Пароль",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Ваша секретная фраза является главным ключом к вашему Session ID. Вы можете использовать ее для восстановления Session ID, если потеряете доступ к своему устройству. Сохраните свою секретную фразу в безопасном месте, и никому её не передавайте.",
   "invalidOpenGroupUrl": "Невалиден URL адрес",
-  "copiedToClipboard": "Скопировано в буфер обмена",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Парола",
   "setPassword": "Set Password",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Passwords do not match",
   "changePasswordInvalid": "The old password you entered is incorrect",
   "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Соединяемся...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Внешний вид",
   "privacySettingsTitle": "Конфиденциальность",
   "notificationsSettingsTitle": "Уведомления",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Введите секретную фразу",
   "displayNameEmpty": "Пожалуйста, выберите отображаемое имя",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ члена",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Пожалуйста, введите более короткое имя группы",
   "pickClosedGroupMember": "Пожалуйста, выберите как минимум 1 участников группы",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Няма блокирани контакти",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Or join one of these...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Pin Conversation",
   "unpinConversation": "Unpin Conversation",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Show User Details",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
