--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "دعوت انجمن",
   "joinOpenGroupAfterInvitationConfirmationTitle": "جوین شدن به $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "آیا مطمئن هستید که میخواهید عضو انجمن $roomName$ شوید؟",
-  "couldntFindServerMatching": "سرور گروه عمومی مورد نظر یافت نشد",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "شناسه Session یا نام ONS را وارید کنید",
   "startNewConversationBy...": "یک مکالمه جدید را با وارد کردن شناسه Session شخصی شروع کنید یا شناسه جلسه خود را با آنها به اشتراک بگذارید.",
   "loading": "در حال بارگذاری...",
@@ -72,7 +72,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "گروه ها و مخاطبین",
   "contactsHeader": "مخاطبین",
-  "messagesHeader": "پیام ها",
+  "messagesHeader": "Conversations",
   "settingsHeader": "تنظیمات",
   "typingAlt": "در حال تایپ انیمیشن برای این مکالمه",
   "contactAvatarAlt": "آواتار متعلق به مخاطب $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "حذف $count$ پیام؟",
   "deleteMessageQuestion": "این پیام حذف شود؟",
   "deleteMessages": "حذف پیام‌ها",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ پیام حذف شد",
   "messageDeletedPlaceholder": "این پیام حذف شده است",
   "from": "از",
@@ -114,7 +115,7 @@
   "clear": "پاک ",
   "clearAllData": "پاک کردن همه داتا",
   "deleteAccountWarning": "این کار پیام‌ها و مخاطبین شما را برای همیشه حذف می‌کند.",
-  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
+  "deleteAccountFromLogin": "آیا مطمئن هستید میخواهید دستگاهتان را پاکسازی کنید؟",
   "deleteContactConfirmation": "آیا مطمئن هستید که می‌خواهید این مکالمه را حذف کنید؟",
   "quoteThumbnailAlt": "پیش‌نمایش تصویر از پیام نقل قول شده",
   "imageAttachmentAlt": "تصویر پیوست شده به پیام",
@@ -123,14 +124,14 @@
   "imageCaptionIconAlt": "آیکون نشان می‌دهد که این تصویر دارای یک عنوان است",
   "addACaption": "یک عنوان اضافه کنید...",
   "copySessionID": "کپی شناسه‌ی Session",
-  "copyOpenGroupURL": "کپی کردن URL گروه",
+  "copyOpenGroupURL": "رونوشت از پیوست گروه",
   "save": "ذخیره",
   "saveLogToDesktop": "ذخیره گزارش در دسکتاپ",
   "saved": "ذخیره شده",
   "tookAScreenshot": "$name$ از صفحه یک عکس گرفت",
   "savedTheFile": "رسانه توسط $name$ ذخیره شد",
   "linkPreviewsTitle": "ارسال پیش‌نمایش‌های لینک",
-  "linkPreviewDescription": "ایجاد پیش‌نمایش‌های لینک برای URLهای تحت پشتیبانی.",
+  "linkPreviewDescription": "ایجاد پیش‌نمایش‌ برای پیوست های تحت پشتیبانی.",
   "linkPreviewsConfirmMessage": "با ارسال پیش‌نمایش لینک‌ها محافظت کامل از متادیتا نخواهید داشت.",
   "mediaPermissionsTitle": "میکروفون",
   "mediaPermissionsDescription": "اجازه دسترسی به میکروفون",
@@ -143,7 +144,7 @@
   "typingIndicatorsSettingTitle": "نشانگر‌های در حال تایپ",
   "zoomFactorSettingTitle": "فاکتور زوم",
   "themesSettingTitle": "تم‌ها",
-  "primaryColor": "رنگ اولیه",
+  "primaryColor": "رنگ اصلی",
   "primaryColorGreen": "رنگ اصلی سبز",
   "primaryColorBlue": "رنگ اصلی آبی",
   "primaryColorYellow": "رنگ اصلی زرد",
@@ -156,7 +157,7 @@
   "oceanDarkThemeTitle": "آبی اقیانوسی تیره",
   "oceanLightThemeTitle": "آبی اقیانوسی روشن",
   "pruneSettingTitle": "مرتب‌سازی انجمن‌ها",
-  "pruneSettingDescription": "پیام‌های قدیمی‌تر از ۶ ماه را از انجمن‌های دارای بیش از ۲۰۰۰ پیام، حذف کنید.",
+  "pruneSettingDescription": "حذف پیام‌های قدیمی‌تر از ۶ ماه از انجمن‌های دارای بیش از ۲۰۰۰ پیام.",
   "enable": "فعال سازی",
   "keepDisabled": "غیر فعال بماند",
   "notificationSettingsDialog": "اطلاعات که در اعلانات نمایش میشود.",
@@ -213,7 +214,7 @@
   "timerOption_1_week_abbreviated": "۱ ه",
   "timerOption_2_weeks_abbreviated": "۲ ه",
   "disappearingMessagesDisabled": "پیام های نابود شونده غیر فعال شدند",
-  "disabledDisappearingMessages": "$name$ پیام های نابود شونده را غیر فعال کرد",
+  "disabledDisappearingMessages": "$name$ پیام های ناپدید شونده را غیر فعال کرده است.",
   "youDisabledDisappearingMessages": "شما پیام های نابود شونده را غیر فعال کردید",
   "timerSetTo": "تایمر روی $time$ تنظیم شد",
   "noteToSelf": "یادداشت به خود",
@@ -240,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ عضو گروه شد",
   "kickedFromTheGroup": "$name$ از گروه حذف شد.",
   "multipleKickedFromTheGroup": "$name$ از گروه حذف شدند.",
-  "blockUser": "مسدود کردن",
-  "unblockUser": "رفع مسدودیت",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "رفع مسدودی",
   "blocked": "مسدود شده",
   "blockedSettingsTitle": "مخاطبین مسدود شده",
@@ -269,11 +270,11 @@
   "updateGroupDialogTitle": "به روز رسانی $name$...",
   "showRecoveryPhrase": "عبارت بازیابی",
   "yourSessionID": "شناسه Session شما",
-  "setAccountPasswordTitle": "رمز عبور",
+  "setAccountPasswordTitle": "گذرواژه",
   "setAccountPasswordDescription": "نیاز به رمزعبور برای باز کردن قفل Session",
-  "changeAccountPasswordTitle": "تغییر رمز عبور",
+  "changeAccountPasswordTitle": "تغییر گذرواژه",
   "changeAccountPasswordDescription": "رمز عبور لازم برای باز کردن قفل Session را تغییر دهید.",
-  "removeAccountPasswordTitle": "حذف رمز عبور حساب‌کاربری",
+  "removeAccountPasswordTitle": "حذف گذرواژه",
   "removeAccountPasswordDescription": "رمز عبور لازم برای باز کردن قفل Session را حذف کنید.",
   "enterPassword": "لطفاً رمز عبورتان را وارد نمایید.",
   "confirmPassword": "تأیید رمز عبور",
@@ -298,12 +299,12 @@
   "setPasswordInvalid": "رمزهای عبور مطابقت ندارند",
   "changePasswordInvalid": "رمز عبور قدیمی وارد شده صحیح نیست",
   "removePasswordInvalid": "رمز عبور نادرست است",
-  "setPasswordTitle": "رمز عبور تنظیم شد",
-  "changePasswordTitle": "رمز عبور تغییر یافت",
-  "removePasswordTitle": "رمز عبور حذف شد",
+  "setPasswordTitle": "گذرواژه تنظیم شد",
+  "changePasswordTitle": "گذرواژه تغییر کرد",
+  "removePasswordTitle": "گذرواژه حذف شد",
   "setPasswordToastDescription": "رمز عبور شما تنظیم شده است. لطفاً آن را فراموش نکنید.",
   "changePasswordToastDescription": "رمز عبور شما تغییر یافته است. لطفاً آن را فراموش نکنید.",
-  "removePasswordToastDescription": "رمز عبور شما حذف شده است.",
+  "removePasswordToastDescription": "گذرواژه شما حذف شده است.",
   "publicChatExists": "شما قبلا عضو این گروه شده اید",
   "connectToServerFail": "نمی‌توانید محلق شوید",
   "connectingToServer": "در حال اتصال...",
@@ -358,11 +359,14 @@
   "appearanceSettingsTitle": "ظاهر",
   "privacySettingsTitle": "حریم خصوصی",
   "notificationsSettingsTitle": "اعلانات",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "محتوی اعلان",
   "notificationPreview": "پیش نمایش",
   "recoveryPhraseEmpty": "عبارت بازیابی خود را وارد کنید",
   "displayNameEmpty": "لطفا یک نام نمایشی وارد کنید",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ عضو",
+  "activeMembers": "$count$ active members",
   "join": "پیوستن",
   "joinOpenGroup": "پیوستن به انجمن",
   "createGroup": "ایجاد گروه",
@@ -409,6 +413,7 @@
   "trustThisContactDialogDescription": "آیا مطمئنید که میخواهید رسانه های ارسال شده توسط $name$ را بارگذاری کنید؟",
   "pinConversation": "سنجاق کردن گفتگو",
   "unpinConversation": "گفتگو را از حالت پین خارج کنید",
+  "markUnread": "Mark Unread",
   "showUserDetails": "نمایش جزئیات کاربر",
   "sendRecoveryPhraseTitle": "ارسال عبارت بازیابی",
   "sendRecoveryPhraseMessage": "شما در حال تلاش برای ارسال عبارت بازیابی خود هستید که می تواند برای دسترسی به حساب خود استفاده شود. آیا مطمئن هستید که می خواهید این پیام را ارسال کنید؟",
@@ -418,8 +423,8 @@
   "dialogClearAllDataDeletionFailedMultiple": "داده‌هایی که توسط گره‌های سرویس حذف نشده‌اند: $snodes$",
   "dialogClearAllDataDeletionQuestion": "آیا می‌خواهید فقط این دستگاه را پاک کنید یا داتا خود را از شبکه نیز حذف کنید؟",
   "clearDevice": "پاک کردن دستگاه",
-  "tryAgain": "تلاش مجدد کنید",
-  "areYouSureClearDevice": "آیا مطمئن هستید که می‌خواهید دستگاه‌تان را پاک کنید؟",
+  "tryAgain": "دوباره امتحان کنید",
+  "areYouSureClearDevice": "آیا از پاک سازی دستگاه خود اطمینان دارید؟",
   "deviceOnly": "فقط پاک کردن دستگاه",
   "entireAccount": "پاک کردن دستگاه و شبکه",
   "areYouSureDeleteDeviceOnly": "آیا مطمئن هستید که می خواهید فقط داده های دستگاه خود را حذف کنید؟",
@@ -481,12 +486,16 @@
   "youHaveANewFriendRequest": "شما درخواست دوستی جدیدی دارید",
   "clearAllConfirmationTitle": "پاک کردن تمام درخواست ها",
   "clearAllConfirmationBody": "از پاک کردن تمام درخواست مکالمات مطمئن هستید?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "پنهان کردن",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "نشان دادن بخش درخواست های پیام رسانی شما",
   "clearAllReactions": "آیا مطمئن هستید میخواید کل $emoji$ را پاک کنید؟",
   "expandedReactionsText": "نمایش کمتر",
   "reactionNotification": "به یک پیام با $emoji$ واکنش بده",
-  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
+  "rateLimitReactMessage": "آهسته! شما بیش از اندازه ایموجی واکنش ارسال کرده اید. بزودی دوباره تلاش کنید",
   "otherSingular": "$number$ دیگر",
   "otherPlural": "$number$ دیگران",
   "reactionPopup": "واکنش داده با",
