--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -28,19 +28,19 @@
   "viewMenuToggleFullScreen": "Teljes képernyő bekapcsolása/kikapcsolása",
   "viewMenuToggleDevTools": "Fejlesztői eszközök megjelenítése/elrejtése",
   "contextMenuNoSuggestions": "Nincsenek javaslatok",
-  "openGroupInvitation": "Community invitation",
+  "openGroupInvitation": "Meghívás közösségbe",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Csatlakozni a $roomName$ nevű szobához?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Biztosan csatlakozni szeretne a(z) $roomName$ nyilvános csoporthoz?",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Írja be Session azonosítóját vagy ONS nevét",
-  "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
+  "startNewConversationBy...": "Beszélgetés kezdeményezéséhez addj meg egy Session ID-t vagy oszd meg a tiédet másokkal.",
   "loading": "Betöltés...",
   "done": "Kész",
   "youLeftTheGroup": "Kiléptél a csoportból",
   "youGotKickedFromGroup": "Ön ki lett dobva ebből a csoportból.",
   "unreadMessages": "Olvasatlan Üzenetek",
   "debugLogExplanation": "Ez a napló az asztalra lesz mentve.",
-  "reportIssue": "Report a Bug",
+  "reportIssue": "Hiba jelentése",
   "markAllAsRead": "Összes megjelölése olvasottként",
   "incomingError": "Nem sikerült kezelni a bejövő üzenetet.",
   "media": "Média",
@@ -62,8 +62,8 @@
   "unableToLoadAttachment": "Nem sikerült betölteni a kiválasztott csatolmányt.",
   "offline": "Nincs csatlakozva",
   "debugLog": "Fejlesztői napló",
-  "showDebugLog": "Export Logs",
-  "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
+  "showDebugLog": "Naplók exportálása",
+  "shareBugDetails": "Hibanaplók exportálása és feltöltése a Session ügyfélszolgálatán keresztül.",
   "goToReleaseNotes": "Release notes megnyitása",
   "goToSupportPage": "Támogatás megnyitása",
   "about": "Névjegy",
@@ -72,7 +72,7 @@
   "noSearchResults": "Nincs találat a \"$searchTerm$\" keresőkifejezése",
   "conversationsHeader": "Partnerek és csoportok",
   "contactsHeader": "Névjegyek",
-  "messagesHeader": "Üzenetek",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Beállítások",
   "typingAlt": "Gépelési animáció ehhez a beszélgetéshez",
   "contactAvatarAlt": "$name$ profilképe",
@@ -100,36 +100,38 @@
   "deleteMessagesQuestion": "Biztos törölni szerente $count$ üzenetet?",
   "deleteMessageQuestion": "Törli ezt az üzenetet?",
   "deleteMessages": "Üzenetek törlése",
-  "deleted": "$count$ deleted",
+  "deleteConversation": "Delete Conversation",
+  "deleted": "$count$ törölve",
   "messageDeletedPlaceholder": "Az üzenete törölve",
   "from": "Feladó",
   "to": "címzett",
   "sent": "Elküldve",
   "received": "Beérkezett",
   "sendMessage": "Küldj egy üzenetet",
-  "groupMembers": "Csoport tagjai",
+  "groupMembers": "Tagok",
   "moreInformation": "További információ",
   "resend": "Újraküldés",
   "deleteConversationConfirmation": "Véglegesen törlöd ezt a beszélgetést?",
-  "clear": "Clear",
+  "clear": "Törlés",
   "clearAllData": "Az összes adat törlése",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "Ez végleg törölni fogja üzeneteit, beszélgetéseit és ismerőseit.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Biztosan törölni szeretné ezt a beszélgetést?",
   "quoteThumbnailAlt": "Az idézett üzenetben megjelenített fotó előnézeti képe",
   "imageAttachmentAlt": "Üzenethez csatolt kép",
-  "videoAttachmentAlt": "Az üzenethez csatolt videó előnézeti képe",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Beszélgetés során küldött fotó",
   "imageCaptionIconAlt": "Ikon, amely azt jelzi, hogy a kép feliratot tartalmaz",
   "addACaption": "Felirat hozzáadása...",
   "copySessionID": "Az ön Session azonosítójának kimásolása",
-  "copyOpenGroupURL": "Csoport URL-jének másolása",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Mentés",
   "saveLogToDesktop": "Napló mentése asztalra",
   "saved": "Elmentve",
   "tookAScreenshot": "$name$ készített egy képernyőképet",
   "savedTheFile": "$name$ lementett egy médiaelemet",
   "linkPreviewsTitle": "Hivatkozások előnézeti képének küldése",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Mikrofon",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -141,31 +143,31 @@
   "typingIndicatorsSettingDescription": "See and share typing indicators in one-to-one chats.",
   "typingIndicatorsSettingTitle": "Gépelésindikátorok",
   "zoomFactorSettingTitle": "Nagyítás mértéke",
-  "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
-  "primaryColorGreen": "Primary color green",
-  "primaryColorBlue": "Primary color blue",
-  "primaryColorYellow": "Primary color yellow",
-  "primaryColorPink": "Primary color pink",
-  "primaryColorPurple": "Primary color purple",
-  "primaryColorOrange": "Primary color  orange",
-  "primaryColorRed": "Primary color red",
-  "classicDarkThemeTitle": "Classic Dark",
-  "classicLightThemeTitle": "Classic Light",
-  "oceanDarkThemeTitle": "Ocean Dark",
-  "oceanLightThemeTitle": "Ocean Light",
-  "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
-  "enable": "Enable",
-  "keepDisabled": "Keep disabled",
-  "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Feladó neve és az üzenet",
+  "themesSettingTitle": "Témák",
+  "primaryColor": "Elsődleges szín",
+  "primaryColorGreen": "Elsődleges szín zöld",
+  "primaryColorBlue": "Elsődleges szín kék",
+  "primaryColorYellow": "Elsődleges szín sárga",
+  "primaryColorPink": "Elsődleges szín rózsaszín",
+  "primaryColorPurple": "Elsődleges szín lila",
+  "primaryColorOrange": "Elsődleges szín narancssárga",
+  "primaryColorRed": "Elsődleges szín piros",
+  "classicDarkThemeTitle": "Klasszikus Sötét",
+  "classicLightThemeTitle": "Klasszikus Világos",
+  "oceanDarkThemeTitle": "Sötét Óceán",
+  "oceanLightThemeTitle": "Világos Óceán",
+  "pruneSettingTitle": "Közösségek Csonkítása",
+  "pruneSettingDescription": "6 hónapnál idősebb közösségi üzenetek törlése ahol több mint 2000 üzenet van.",
+  "enable": "Engedélyezés",
+  "keepDisabled": "Maradjon letiltva",
+  "notificationSettingsDialog": "Az értesítésekben megjelenő információ.",
+  "nameAndMessage": "Név és Tartalom",
   "noNameOrMessage": "Se név, se üzenet",
   "nameOnly": "Csak a feladó neve",
   "newMessage": "Új üzenet",
   "createConversationNewContact": "Create a conversation with a new contact",
   "createConversationNewGroup": "Create a group with existing contacts",
-  "joinACommunity": "Join a community",
+  "joinACommunity": "Csatlakozás egy közösséghez",
   "chooseAnAction": "Choose an action to start a conversation",
   "newMessages": "Új üzenetek",
   "notificationMostRecentFrom": "Legfrissebb tőle:",
@@ -174,7 +176,7 @@
   "sendFailed": "Küldés sikertelen",
   "mediaMessage": "Médiaüzenet",
   "messageBodyMissing": "Kérlek írd be az üzenetet.",
-  "messageBody": "Message body",
+  "messageBody": "Üzenet szövege",
   "unblockToSend": "Üzenet küldéséhez oldd fel ismerősöd blokkolását!",
   "unblockGroupToSend": "Üzenet küldéséhez oldd fel a csoportot a blokk alól!",
   "youChangedTheTimer": "Az időzítő értékét a következőre módosítottad: $time$.",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 óra",
   "timerOption_1_day": "1 nap",
   "timerOption_1_week": "1 hét",
+  "timerOption_2_weeks": "két hét",
   "disappearingMessages": "Eltűnő üzenetek",
   "changeNickname": "Becenév módosítása",
   "clearNickname": "Becenév törlése",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12ó",
   "timerOption_1_day_abbreviated": "1n",
   "timerOption_1_week_abbreviated": "1h",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Eltűnő üzenetek letiltva",
-  "disabledDisappearingMessages": "$name$ letiltotta az eltűnő üzeneteket",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Letiltottad az eltűnő üzeneteket",
   "timerSetTo": "Időzítő állapota: $time$",
   "noteToSelf": "Privát feljegyzés",
   "hideMenuBarTitle": "Menüsor elrejtése",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Új beszélgetés megkezdése…",
-  "invalidNumberError": "Érvénytelen telefonszám",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Automatikus frissítés",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ belépett a csoportba.",
   "kickedFromTheGroup": "$name$ eltávolításra került a csoportból.",
   "multipleKickedFromTheGroup": "$name$ eltávolításra került a csoportból.",
-  "blockUser": "Letiltás",
-  "unblockUser": "Blokkolás feloldása",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Blokkolás feloldva",
   "blocked": "Blokkolt",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "$name$ frissítése...",
   "showRecoveryPhrase": "Helyreállítási kód",
   "yourSessionID": "A Session azonosítód",
-  "setAccountPasswordTitle": "Fiók jelszó beállítása",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Fiók jelszavának megváltoztatása",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Fiók jelszavának eltávolítása",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Kérlek add meg a jelszavad",
   "confirmPassword": "Jelszó megerősítése",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Kérlek add meg a jelszavad",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Érvénytelen URL",
-  "copiedToClipboard": "Vágólapra másolva",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Jelszó",
   "setPassword": "Jelszó beállítása",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "A megadott jelszavak nem egyeznek",
   "changePasswordInvalid": "A megadott régi jelszó helytelen",
   "removePasswordInvalid": "Hibás jelszó",
-  "setPasswordTitle": "Jelszó beállítása",
-  "changePasswordTitle": "A jelszó módosult",
-  "removePasswordTitle": "A jelszó eltávolításra került",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "A jelszó megváltozott. Tartsd biztonságos helyen!",
   "changePasswordToastDescription": "A jelszó megváltozott. Tartsd biztonságos helyen!",
-  "removePasswordToastDescription": "Eltávolítottad a jelszavadat.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Csatlakozás...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Megjelenés",
   "privacySettingsTitle": "Adatvédelem",
   "notificationsSettingsTitle": "Értesítések",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Írd be a helyreállítási szavakat",
   "displayNameEmpty": "Add meg a megjelenítendő nevedet",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ tag",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Nincsenek titltott kontaktok",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Vagy csatlakozz az egyikhez az alábbiakból...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Biztosan le szeretnéd tölteni a(z) $name$ által küldött tartalmat?",
   "pinConversation": "Beszélgetés feltűzése",
   "unpinConversation": "Feltűzött beszélgetés eltávolítása",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Show User Details",
   "sendRecoveryPhraseTitle": "Helyreállító kódmondat küldése",
   "sendRecoveryPhraseMessage": "A helyreállító kódmondatod készülsz elküldeni, amellyel hozzá lehet férni fiókodhoz. Biztosan el akarod küldeni?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Biztosan törlöd az adatokat csak erről az eszközről?",
   "dialogClearAllDataDeletionFailedMultiple": "Az adatokat a következő szolgáltatási csomópontok nem törölték: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Nem fogadott hívás '$name$' -től, mert előbb engedélyezned kell a 'Hang és videó hívásokat' a Biztonsági beállításokban.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Felhívtad $name$",
   "answeredACall": "Hívás $name$ -al",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
