--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$에 가입하시겠습니까?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "일치하는 오픈 그룹 서버를 찾지 못했습니다.",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Session ID나 ONS name을 입력하세요.",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "불러오는 중",
@@ -72,7 +72,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "연락처와 그룹",
   "contactsHeader": "연락처",
-  "messagesHeader": "메시지",
+  "messagesHeader": "Conversations",
   "settingsHeader": "설정",
   "typingAlt": "이 대화에 타이핑 애니메이션 설정",
   "contactAvatarAlt": "연락처 $name$에 대한 아바타",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "$count$개의 메시지를 삭제할까요?",
   "deleteMessageQuestion": "이 메시지를 삭제하시겠습니까?",
   "deleteMessages": "Delete messages",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ 삭제됨",
   "messageDeletedPlaceholder": "메시지가 삭제되었습니다.",
   "from": "From",
@@ -107,29 +108,30 @@
   "sent": "전송됨",
   "received": "수신됨",
   "sendMessage": "메세지 보내기",
-  "groupMembers": "그룹 구성원",
+  "groupMembers": "Members",
   "moreInformation": "더 많은 정보",
   "resend": "재전송",
   "deleteConversationConfirmation": "대화에서 이 메세지를 영원히 지웁니까?",
   "clear": "Clear",
   "clearAllData": "모든 데이터 삭제",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "이 대화를 삭제하시겠습니까?",
   "quoteThumbnailAlt": "인용된 메시지의 축소된 이미지",
   "imageAttachmentAlt": "메시지에 첨부된 이미지",
-  "videoAttachmentAlt": "메시지에 첨부된 비디오 스크린샷",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "대화에서 보낸 이미지",
   "imageCaptionIconAlt": "이 이미지에 설명이 있는지 보여주는 아이콘",
   "addACaption": "설명을 적어주세요...",
   "copySessionID": "Session ID 복사",
-  "copyOpenGroupURL": "그룹 링크 복",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "저장",
   "saveLogToDesktop": "데스크탑에 저장",
   "saved": "저장 완료",
   "tookAScreenshot": "$name$님이 스크린샷을 찍었습니다.",
   "savedTheFile": "$name$님이 미디어를 저장하셨습니다.",
   "linkPreviewsTitle": "링크 미리보기 보내기",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "당신이 링크 미리보기를 보낼때 모든 메타데이터 보호가 이루어지지 않습니다.",
   "mediaPermissionsTitle": "마이크",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "입력 지시자 깜박임",
   "zoomFactorSettingTitle": "화면 비율 조정",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "활성화",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Both sender name and message",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Neither name nor message",
   "nameOnly": "Only sender name",
   "newMessage": "새 메세지",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12시간",
   "timerOption_1_day": "1일",
   "timerOption_1_week": "1주",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "메시지 사라지기 설정",
   "changeNickname": "닉네임 변경",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12시간",
   "timerOption_1_day_abbreviated": "1일",
   "timerOption_1_week_abbreviated": "1주",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "메세지 숨김 끄기",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "Timer set to $time$",
   "noteToSelf": "개인용 메모",
   "hideMenuBarTitle": "메뉴 바 숨기기",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start new conversation…",
-  "invalidNumberError": "Invalid number",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "ONS 이름을 확인하지 못했습니다",
   "autoUpdateSettingTitle": "자동 업데이트",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ joined the group",
   "kickedFromTheGroup": "$name$ 님이 그룹에서 제거 되었습니다.",
   "multipleKickedFromTheGroup": "$name$ 님이 그룹에서 제거 되었습니다.",
-  "blockUser": "차단",
-  "unblockUser": "차단 해제",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "차단해제됨",
   "blocked": "차단됨",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "$name$ 을(를) 업데이트 중…",
   "showRecoveryPhrase": "복구 문구",
   "yourSessionID": "당신의 세션 ID",
-  "setAccountPasswordTitle": "계정 비밀번호 설정",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "계정 비밀번호 변경",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "계정 비밀번호를 지우기",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "비밀번호를 입력해주세요",
   "confirmPassword": "비밀번호 확인",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "비밀번호를 입력해주세요",
   "recoveryPhraseSavePromptMain": "복구 문구는 당신의 세션 ID 의 마스터 키 입니다. 만약 당신이 기기의 연결 권한을 잃어버렸다면, 당신의 세션 ID 를 복구하기 위해 복구 문구를 사용할수 있습니다. 복구 문구를 안전한 곳에 저장하고, 절대 남에게 알려주지 마세요.",
   "invalidOpenGroupUrl": "유효하지 않은 URL",
-  "copiedToClipboard": "클립보드에 복사됨",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "비밀번호",
   "setPassword": "비밀번호 설정",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "비밀번호가 일치하지 않습니다",
   "changePasswordInvalid": "입력한 이전 비밀번호가 올바르지 않습니다.",
   "removePasswordInvalid": "잘못된 비밀번호",
-  "setPasswordTitle": "비밀번호 설정",
-  "changePasswordTitle": "비밀번호가 변경되었습니다",
-  "removePasswordTitle": "비밀번호가 제거되었습니다",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "비밀번호 설정이 완료되었습니다. 안전히 관리하시기 바랍니다.",
   "changePasswordToastDescription": "비밀번호 변경이 완료되었습니다. 안전히 관리하시기 바랍니다.",
-  "removePasswordToastDescription": "비밀번호가 제거되었습니다.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "연결하는중...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "모양",
   "privacySettingsTitle": "보안",
   "notificationsSettingsTitle": "알림",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "복구 구문을 입력하세요.",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$명",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "짧은 그룹 이름을 입력해주세요.",
   "pickClosedGroupMember": "최소 1명의 멤버를 선택해주세요.",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "차단된 연락처가 없습니다.",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "또는 이 중에서 참여...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "$name$님이 전송한 미디어를 다운로드하시겠습니까?",
   "pinConversation": "대화 고정하기",
   "unpinConversation": "대화 고정 취소",
+  "markUnread": "Mark Unread",
   "showUserDetails": "사용자 정보 보기",
   "sendRecoveryPhraseTitle": "복구 문구 전송중",
   "sendRecoveryPhraseMessage": "복구 문구를 전송하면 다른 사람이 당신의 계정에 접근할 수 있게 됩니다. 정말 전송할까요?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "데이터를 이 장치에서만 삭제하시겠습니까?",
   "dialogClearAllDataDeletionFailedMultiple": "데이터가 이 서비스 노드에서 삭제되지 않았습니다: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "장치 내 데이터를 정말로 삭제 하시겠습니까?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "$name$ 님의 전화를 받지 못했습니다. 개인정보 설정에서 '음성 및 영상 통화' 항목을 활성화 시켜주십시오.",
   "callMissedNotApproved": "이 대화를 수락하지 않았기 때문에 $name$ 님과의 통화가 취소되었습니다. 메세지를 먼저 보내보세요.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "$name$님에게 전화함",
   "answeredACall": "$name$님과의 통화",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "친구 요청이 들어왔습니다.",
   "clearAllConfirmationTitle": "모든 메세지 요청 삭제",
   "clearAllConfirmationBody": "모든 메세지 요청을 삭제하시겠습니까?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "숨기기",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "메세지 요청함 보기",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
