--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Įkeliama...",
@@ -72,7 +72,7 @@
   "noSearchResults": "\"$searchTerm$\" negrąžino jokių rezultatų",
   "conversationsHeader": "Adresatai ir grupės",
   "contactsHeader": "Kontaktai",
-  "messagesHeader": "Žinutės",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Nustatymai",
   "typingAlt": "Rašymo animacija šiam pokalbiui",
   "contactAvatarAlt": "Avataras, skirtas $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Ištrinti šią žinutę?",
   "deleteMessages": "Ištrinti žinutes",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Nuo",
@@ -107,29 +108,30 @@
   "sent": "Išsiųsta",
   "received": "Gauta",
   "sendMessage": "Siųsti žinutę",
-  "groupMembers": "Grupės dalyviai",
+  "groupMembers": "Members",
   "moreInformation": "Daugiau informacijos",
   "resend": "Siųsti iš naujo",
   "deleteConversationConfirmation": "Ar ištrinti šį pokalbį visiems laikams?",
   "clear": "Clear",
   "clearAllData": "Išvalyti visus duomenis",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Paveikslo iš cituotos žinutės miniatiūra",
   "imageAttachmentAlt": "Prie žinutės pridėtas paveikslas",
-  "videoAttachmentAlt": "Prie žinutės pridėto vaizdo įrašo ekrano kopija",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Pokalbyje išsiųstas paveikslas",
   "imageCaptionIconAlt": "Piktograma, rodanti, kad šis paveikslas turi paaiškinimą",
   "addACaption": "Pridėti paaiškinimą...",
   "copySessionID": "Kopijuoti Session ID",
-  "copyOpenGroupURL": "Kopijuoti grupės URL",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Įrašyti",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Įrašyta",
   "tookAScreenshot": "$name$ padarė ekrano kopiją",
   "savedTheFile": "$name$ įsirašė mediją",
   "linkPreviewsTitle": "Siųsti nuorodų peržiūras",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Ir siuntėjo vardas, ir žinutė",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Nei vardas, nei žinutė",
   "nameOnly": "Tik siuntėjo vardas",
   "newMessage": "Nauja žinutės",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 valandų",
   "timerOption_1_day": "1 diena",
   "timerOption_1_week": "1 savaitė",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Išnykstančios žinutės",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12 val.",
   "timerOption_1_day_abbreviated": "1 d.",
   "timerOption_1_week_abbreviated": "1 sav.",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Išnykstančios žinutės išjungtos",
-  "disabledDisappearingMessages": "$name$ išjungė išnykstančias žinutes",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Jūs išjungėte išnykstančias žinutes",
   "timerSetTo": "Laikmatis nustatytas į $time$",
   "noteToSelf": "Pastabos sau",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Pradėti naują pokalbį…",
-  "invalidNumberError": "Neteisingas numeris",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ prisijungė prie grupės",
   "kickedFromTheGroup": "$name$ was removed from the group.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Unblocked",
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Updating $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
   "yourSessionID": "Jūsų Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Change Account Password",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Šalinti paskyros slaptažodį",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Įveskite slaptažodį",
   "confirmPassword": "Confirm password",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Įveskite slaptažodį",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Neteisingas URL",
-  "copiedToClipboard": "Nukopijuota į iškarpinę",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Slaptažodis",
   "setPassword": "Nustatyti slaptažodį",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Slaptažodžiai nesutampa",
   "changePasswordInvalid": "Jūsų įvestas senas slaptažodis yra neteisingas",
   "removePasswordInvalid": "Neteisingas slaptažodis",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Connecting...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Išvaizda",
   "privacySettingsTitle": "Privatumas",
   "notificationsSettingsTitle": "Pranešimai",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "Narių: $count$",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Įveskite trumpesnį grupės pavadinimą",
   "pickClosedGroupMember": "Pasirinkite bent 1 grupės narį",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Nėra užblokuotų adresatų",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Arba prisijunkite prie vienos iš šių...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Prisegti pokalbį",
   "unpinConversation": "Atsegti pokalbį",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Show User Details",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
