--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Bli med i $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Klarte ikke finne den tilsvarende opengroup-serveren",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Angi Session-ID eller ONS-navn",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Laster...",
@@ -72,7 +72,7 @@
   "noSearchResults": "Ingen resultater funnet for «$searchTerm$»",
   "conversationsHeader": "Kontakter og grupper",
   "contactsHeader": "Kontakter",
-  "messagesHeader": "Beskjeder",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Innstillinger",
   "typingAlt": "Inntastingsanimasjon for denne samtalen",
   "contactAvatarAlt": "Avatar for kontakt $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Slett $count$ meldinger?",
   "deleteMessageQuestion": "Slett denne meldingen?",
   "deleteMessages": "Slett beskjeder",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ slettet",
   "messageDeletedPlaceholder": "Denne beskjeden er slettet",
   "from": "Fra:",
@@ -107,29 +108,30 @@
   "sent": "Sendt",
   "received": "Mottatt",
   "sendMessage": "Beskjed",
-  "groupMembers": "Gruppemedlemmer",
+  "groupMembers": "Members",
   "moreInformation": "Mer informasjon",
   "resend": "Send på nytt",
   "deleteConversationConfirmation": "Slett beskjedene permanent i denne samtalen?",
   "clear": "Clear",
   "clearAllData": "Fjern alle data",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Er du sikker på at du vil slette denne samtalen?",
   "quoteThumbnailAlt": "Miniatyrbilde av bilde i sitert beskjed",
   "imageAttachmentAlt": "Bilde vedlagt til beskjed",
-  "videoAttachmentAlt": "Skjermbilde av video vedlagt til beskjed",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Bilde sendt i samtale",
   "imageCaptionIconAlt": "Symbol som viser at dette bildet har en bildetekst",
   "addACaption": "Legg til bildetekst...",
   "copySessionID": "Kopier Session-ID",
-  "copyOpenGroupURL": "Kopier gruppens URL",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Lagre",
   "saveLogToDesktop": "Lagre loggfil til skrivebordet",
   "saved": "Lagret",
   "tookAScreenshot": "$name$ tok et skjermbilde",
   "savedTheFile": "Media lagret av $name$",
   "linkPreviewsTitle": "Send forhåndsvisning av lenker",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "Du vil ikke ha full metadatabeskyttelse når du sender lenkeforhåndsvisninger.",
   "mediaPermissionsTitle": "Mikrofon",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Inntastingsindikatorer",
   "zoomFactorSettingTitle": "Zoomfaktor",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Aktiver",
   "keepDisabled": "Hold deaktivert",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Navn og innhold",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Verken navn eller innhold",
   "nameOnly": "Kun navn",
   "newMessage": "Ny beskjed",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 timer",
   "timerOption_1_day": "1 dag",
   "timerOption_1_week": "1 uke",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Tidsbegrensede beskjeder",
   "changeNickname": "Forandre kallenavn",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12t",
   "timerOption_1_day_abbreviated": "1 d",
   "timerOption_1_week_abbreviated": "1u",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Tidsbegrensede beskjeder er deaktivert",
-  "disabledDisappearingMessages": "$name$ deaktiverte tidsbegrensede beskjeder.",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Du deaktiverte tidsbegrensede beskjeder.",
   "timerSetTo": "Utløpstiden for beskjeder satt til $time$",
   "noteToSelf": "Notat til meg selv",
   "hideMenuBarTitle": "Skjul menylinjen",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start ny samtale",
-  "invalidNumberError": "Ugyldig Session-ID eller ONS-navn",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Fant ikke ONS-navnet",
   "autoUpdateSettingTitle": "Automatisk oppdatering",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$name$ ble med i gruppen.",
   "kickedFromTheGroup": "$name$ ble fjernet fra gruppen.",
   "multipleKickedFromTheGroup": "$name$ ble fjernet fra gruppen.",
-  "blockUser": "Blokker",
-  "unblockUser": "Avblokker",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Blokkering opphevet",
   "blocked": "Blokkert",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Oppdaterer $name$...",
   "showRecoveryPhrase": "Gjenopprettelsesfrase",
   "yourSessionID": "Din Session-ID",
-  "setAccountPasswordTitle": "Still kontopassord",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Forandre kontopassord",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Fjern kontopassord",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Vennligst skriv inn passordet ditt",
   "confirmPassword": "Bekreft passordet",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Vennligst skriv inn passordet ditt",
   "recoveryPhraseSavePromptMain": "Gjenopprettelsesfrasen din er hovednøkkelen til Session-IDen din – du kan bruke den for å gjenopprette Session-IDen din dersom du mister tilgang til enheten din. Arkiver gjenopprettelsesfrasen din på et trygt sted, og ikke gi den til noen.",
   "invalidOpenGroupUrl": "Ugyldig URL",
-  "copiedToClipboard": "Kopiert til utklippstavlen",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Passord",
   "setPassword": "Still passord",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Passordene stemmer ikke overens",
   "changePasswordInvalid": "Det gamle passordet du skrev inn, var galt",
   "removePasswordInvalid": "Galt passord",
-  "setPasswordTitle": "Stilte passordet",
-  "changePasswordTitle": "Forandret passordet",
-  "removePasswordTitle": "Fjernet passordet",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Passordet er blitt stilt. Vennligst oppbevar det trygt.",
   "changePasswordToastDescription": "Passordet ditt er endret. Vennligst oppbevar det trygt.",
-  "removePasswordToastDescription": "Du har fjernet passordet ditt.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Kobler til...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Utseende",
   "privacySettingsTitle": "Personvern",
   "notificationsSettingsTitle": "Varsler",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Skriv inn gjenopprettelsesfrasen",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ medlemmer",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Vennligst skriv inn et kortere gruppenavn",
   "pickClosedGroupMember": "Vennligst velg minst 1 gruppemedlem",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Ingen blokkerte kontakter",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Eller bli med i en av disse...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Er du sikker på at du vil laste ned medier sendt av $name$?",
   "pinConversation": "Fest samtale",
   "unpinConversation": "Løsne samtale",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Vis brukeropplysninger",
   "sendRecoveryPhraseTitle": "Sender gjenopprettelsesfrase",
   "sendRecoveryPhraseMessage": "Du forsøker å sende gjenopprettelsesfrasen din, som kan brukes til å få tilgang til kontoen din. Er du sikker på at du vil sende denne beskjeden?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Vil du slette opplysningene kun fra denne enheten?",
   "dialogClearAllDataDeletionFailedMultiple": "Opplysninger ikke slettet av disse tjenesteknutepunktene: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Er du sikker på at du kun vil slette opplysningene på enheten?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Oppringing fra '$name$ mislyktes fordi du trenger å aktivere 'Stemme- og videosamtaler' tillatelsen i personvernsinnstillingene.",
   "callMissedNotApproved": "Anrop fra '$name$' gikk tapt fordi du ikke har akseptert denne konversasjonen ennå. Du må sende dem en melding først.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Du ringte $name$",
   "answeredACall": "Oppringning med $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "Du har en ny venneforespørsel",
   "clearAllConfirmationTitle": "Fjern alle meldingsforespørsler",
   "clearAllConfirmationBody": "Er du sikker på at du ønsker å slette alle meldingsforespørsler?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Skjule",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "Vis din innboks for meldingsforespørsler",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
