--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Alăturaţi-vă $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Introdu ID sesiune sau nume ONS",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Se încarcă...",
@@ -72,7 +72,7 @@
   "noSearchResults": "Nici un rezultat pentru \"$searchTerm$\"",
   "conversationsHeader": "Contate și Grupuri",
   "contactsHeader": "Contacte",
-  "messagesHeader": "Mesaje",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Setări",
   "typingAlt": "Animații la tastare pentru conversația curentă",
   "contactAvatarAlt": "Avatar pentru contactul $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Ștergi acest mesaj?",
   "deleteMessages": "Șterge mesajele",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Acest mesaj a fost șters",
   "from": "De la",
@@ -107,29 +108,30 @@
   "sent": "Trimis",
   "received": "Primit",
   "sendMessage": "Trimite mesaj",
-  "groupMembers": "Membrii grupului",
+  "groupMembers": "Members",
   "moreInformation": "Mai multe informații",
   "resend": "Retrimite",
   "deleteConversationConfirmation": "Şterg permanent acestă conversație?",
   "clear": "Clear",
   "clearAllData": "Șterge toate datele",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Sunteți sigur că vreți să ștergeți această conversație?",
   "quoteThumbnailAlt": "Pictograma imaginii din mesajul citat",
   "imageAttachmentAlt": "Imagine atașată la mesaj",
-  "videoAttachmentAlt": "Screenshot la video atașat la mesaj",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Imagine trimisă în conversație",
   "imageCaptionIconAlt": "Pictograma care arată că această imagine are o legendă",
   "addACaption": "Adăugați un titlu...",
   "copySessionID": "Copiază ID-ul Session",
-  "copyOpenGroupURL": "Copiază URL-ul grupului",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Salvează",
   "saveLogToDesktop": "Salvează jurnalul pe desktop",
   "saved": "Salvat",
   "tookAScreenshot": "$name$ a efectuat o captură de ecran",
   "savedTheFile": "Media salvată de $name$",
   "linkPreviewsTitle": "Trimite Previzualizări Link",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "Nu veți avea protecție completă asupra metadatelor atunci când trimiteți sau primiți previzualizări ale link-ului.",
   "mediaPermissionsTitle": "Microfon",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Indicatori tastare",
   "zoomFactorSettingTitle": "Factor de mărire",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Şi numele expeditorului şi mesajul",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Nici numele nici mesajul",
   "nameOnly": "Numai numele expeditorului",
   "newMessage": "Mesaj nou",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 ore",
   "timerOption_1_day": "1 zi",
   "timerOption_1_week": "1 săptămână",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Mesaje care dispar",
   "changeNickname": "Schimbã Numele",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12 ore",
   "timerOption_1_day_abbreviated": "O zi",
   "timerOption_1_week_abbreviated": "O săptămână",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Mesaje care dispar sunt dezactivate",
-  "disabledDisappearingMessages": "$name$ a dezactivat mesajele care dispar",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Ai dezactivat mesajele care dispar",
   "timerSetTo": "Cronometru setat la $time$",
   "noteToSelf": "Notă personală",
   "hideMenuBarTitle": "Ascundeți bara de meniu",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Pornește o conversație nouă...",
-  "invalidNumberError": "Număr invalid",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Eroare la rezolvarea numelui ONS",
   "autoUpdateSettingTitle": "Actualizare automată",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ s-a alăturat grupului",
   "kickedFromTheGroup": "$name$ a fost eliminat din grup.",
   "multipleKickedFromTheGroup": "$name$ a fost eliminat din grup.",
-  "blockUser": "Blochează",
-  "unblockUser": "Deblochează",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Dezblocat",
   "blocked": "Blocat",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Se actualizează $name$...",
   "showRecoveryPhrase": "Frază de recuperare",
   "yourSessionID": "ID-ul tău Session",
-  "setAccountPasswordTitle": "Setează parola contului",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Schimbă Parola Contului",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Eliminați parola contului",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Vă rugăm să introduceţi parola",
   "confirmPassword": "Confirmă parola",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Vă rugăm să introduceţi parola",
   "recoveryPhraseSavePromptMain": "Fraza ta de recuperare este cheia principală a ID-ului Session— o poți folosi pentru a restabili ID-ul Session dacă pierzi accesul la dispozitiv. Păstrați fraza de recuperare într-un loc sigur, și nu-l dați nimănui.",
   "invalidOpenGroupUrl": "URL invalid",
-  "copiedToClipboard": "S-a copiat în clipboard",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Parolă",
   "setPassword": "Setează parolă",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Parolele nu se potrivesc",
   "changePasswordInvalid": "Vechea parolă introdusă este incorectă",
   "removePasswordInvalid": "Parolă incorectă",
-  "setPasswordTitle": "Setează parola",
-  "changePasswordTitle": "Schimbã Parola",
-  "removePasswordTitle": "Parola a fost eliminată",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Parola ta a fost setată. Țîne-o într-un loc sigur te rugam.",
   "changePasswordToastDescription": "Parola ta a fost schimbată. Te rugăm să o păstrezi în siguranță.",
-  "removePasswordToastDescription": "Ai șters parola.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Se conectează...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Aspect",
   "privacySettingsTitle": "Confidenţialitate",
   "notificationsSettingsTitle": "Notificări",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Introduceți fraza de recuperare",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ membri",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Te rugăm să introduci un nume de grup mai scurt",
   "pickClosedGroupMember": "Te rugăm să alegi cel puțin un membru al grupului",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Nu aveți contacte blocate",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Sau alătură-te uneia dintre acestea...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Ești sigur că vrei să descarci fișiere multimedia trimise de $name$?",
   "pinConversation": "Fixare conversație",
   "unpinConversation": "Unpin Conversation",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Arată detaliile utilizatorului",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Apel pierdut de la „$name$” deoarece trebuie să oferi permisiunea pentru „Apeluri vocale și video” din setările de confidențialitate.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Ai sunat pe $name$",
   "answeredACall": "Apel cu $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
