--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$ ට එක්වනවාද?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Session ID හෝ ONS නම ඇතුලත් කරන්න",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "පූරණය වෙමින්…",
@@ -72,7 +72,7 @@
   "noSearchResults": "\"$searchTerm$\" සඳහා සෙවුම් ප්‍රතිඵල නැත",
   "conversationsHeader": "සම්බන්ධතා සහ කණ්ඩායම්",
   "contactsHeader": "සබඳතා",
-  "messagesHeader": "පණිවිඩ",
+  "messagesHeader": "Conversations",
   "settingsHeader": "සැකසුම්",
   "typingAlt": "මෙම සංවාදය සඳහා සජීවිකරණය ටයිප් කිරීම",
   "contactAvatarAlt": "සම්බන්ධතා $name$සඳහා අවතාරය",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "පණිවිඩ $count$ ක් මකන්නද?",
   "deleteMessageQuestion": "මෙම පණිවිඩය මකන්නද?",
   "deleteMessages": "පණිවිඩ මකන්න",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "මෙම පණිවිඩය මකා ඇත",
   "from": "වෙතින්:",
@@ -107,29 +108,30 @@
   "sent": "යැවිණි",
   "received": "ලැබී",
   "sendMessage": "පණිවිඩය",
-  "groupMembers": "{group} සාමාජිකයින්",
+  "groupMembers": "Members",
   "moreInformation": "තව තොරතුරු",
   "resend": "නැවත යවන්න",
   "deleteConversationConfirmation": "මෙම සංවාදයේ ඇති පණිවිඩ ස්ථිරවම මකන්නද?",
   "clear": "Clear",
   "clearAllData": "සියලුම දත්ත හිස් කරන්න",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "ඔබට මෙම සංවාදය මැකීමට අවශ්‍ය බව විශ්වාසද?",
   "quoteThumbnailAlt": "උපුටා ගත් පණිවිඩයෙන් රූපයේ සිඟිති රුව",
   "imageAttachmentAlt": "පණිවිඩයට රූපය අමුණා ඇත",
-  "videoAttachmentAlt": "වීඩියෝවේ තිර රුවක් පණිවිඩයට අමුණා ඇත",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "සංවාදයේ යවන ලද රූපය",
   "imageCaptionIconAlt": "මෙම රූපයට සිරස්තලයක් ඇති බව පෙන්වන නිරූපකය",
   "addACaption": "සිරස්තලයක් එක් කරන්න...",
   "copySessionID": "සැසි හැඳුනුම්පත පිටපත් කරන්න",
-  "copyOpenGroupURL": "සමූහයේ ඒ.ස.නි. පිටපත්කරන්න",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "සුරකින්න",
   "saveLogToDesktop": "ලොගය ඩෙස්ක්ටොප් එකට සුරකින්න",
   "saved": "සුරැකිණි",
   "tookAScreenshot": "$name$ තිර රුවක් ගත්තා",
   "savedTheFile": "මාධ්‍ය $name$කින් සුරකින ලදී",
   "linkPreviewsTitle": "සබැඳියේ පෙරදසුන් යවන්න",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "සබැඳි පෙරදසුන් යැවීමේදී ඔබට සම්පූර්ණ පාරදත්ත ආරක්ෂාවක් නොලැබෙනු ඇත.",
   "mediaPermissionsTitle": "මයික්රෆෝනය",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "ටයිප් කිරීමේ දර්ශක",
   "zoomFactorSettingTitle": "විශාලන සාධකය",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "නම සහ අන්තර්ගතය",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "නමක් හෝ අන්තර්ගතයක් නැත",
   "nameOnly": "නම පමණි",
   "newMessage": "නව පණිවිඩය",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "පැය 12",
   "timerOption_1_day": "දවස් 1",
   "timerOption_1_week": "සති 1",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "නොපෙනී යන පණිවිඩ",
   "changeNickname": "අපනාමය වෙනස් කරන්න",
   "clearNickname": "පැහැදිලි අන්වර්ථ නාමය",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "පැ12",
   "timerOption_1_day_abbreviated": "ද1",
   "timerOption_1_week_abbreviated": "ස1",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "පණිවිඩ නොපෙනී යාම අබල කර ඇත",
-  "disabledDisappearingMessages": "$name$ පණිවිඩ නොපෙනී යාම අබල කළා.",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "ඔබ පණිවිඩ නොපෙනී යාම අබල කළා.",
   "timerSetTo": "පණිවිඩ නොපෙනී යාමේ මුහුර්තකය $time$ ට සකසා ඇත",
   "noteToSelf": "ස්වයං සටහන්",
   "hideMenuBarTitle": "මෙනු තීරුව සඟවන්න",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "නව සම්භාෂණයක් අරඹන්න",
-  "invalidNumberError": "වලංගු නොවන Session ID හෝ ONS නම",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "ONS නම විසඳීමට අසමත් විය",
   "autoUpdateSettingTitle": "ස්වයං යාවත්කාලය",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$name$ සමූහයට එක්වුනා.",
   "kickedFromTheGroup": "$name$ කණ්ඩායමෙන් ඉවත් කරන ලදී.",
   "multipleKickedFromTheGroup": "$name$ කණ්ඩායමෙන් ඉවත් කරන ලදී.",
-  "blockUser": "අවහිර",
-  "unblockUser": "අනවහිර",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "අනවහිර කළා",
   "blocked": "අවහිර කර ඇත",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "$name$ යාවත්කාල වෙමින්...",
   "showRecoveryPhrase": "ප්‍රතිසාධන වාක්‍ය ඛණ්ඩය",
   "yourSessionID": "ඔබගේ සැසි හැඳුනුම්පත",
-  "setAccountPasswordTitle": "ගිණුම් මුරපදය සකසන්න",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "ගිණුමේ මුරපදය වෙනස් කරන්න",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "ගිණුමේ මුරපදය ඉවත් කරන්න",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "ඔබගේ මුරපදය ඇතුල් කරන්න",
   "confirmPassword": "මුරපදය තහවුරු කරන්න",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "ඔබගේ මුරපදය ඇතුල් කරන්න",
   "recoveryPhraseSavePromptMain": "ඔබේ ප්‍රතිසාධන වාක්‍ය ඛණ්ඩය ඔබේ සැසි හැඳුනුම්පතේ ප්‍රධාන යතුරයි — ඔබට ඔබේ උපාංගයට ප්‍රවේශය අහිමි වුවහොත් ඔබේ සැසි හැඳුනුම්පත ප්‍රතිසාධනය කිරීමට ඔබට එය භාවිත කළ හැක. ඔබගේ ප්‍රතිසාධන වාක්‍ය ඛණ්ඩය ආරක්ෂිත ස්ථානයක ගබඩා කරන්න, එය කිසිවෙකුට ලබා නොදෙන්න.",
   "invalidOpenGroupUrl": "වලංගු නොවන ඒ.ස.නි. කි",
-  "copiedToClipboard": "පසුරුපුවරුවට පිටපත් විය",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "මුරපදය",
   "setPassword": "මුරපදය සකසන්න",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "මුරපද නොගැලපේ",
   "changePasswordInvalid": "ඔබ ඇතුල් කළ පරණ මුරපදය සාවද්‍යයි",
   "removePasswordInvalid": "සාවද්‍ය මුරපදයකි",
-  "setPasswordTitle": "මුරපදය සකසන්න",
-  "changePasswordTitle": "මුරපදය වෙනස් කළා",
-  "removePasswordTitle": "මුරපදය ඉවත් කරන්න",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "ඔබගේ මුරපදය සකසා ඇත. කරුණාකර එය ආරක්ෂිතව තබා ගන්න.",
   "changePasswordToastDescription": "ඔබගේ මුරපදය වෙනස් කර ඇත. කරුණාකර එය ආරක්ෂිතව තබා ගන්න.",
-  "removePasswordToastDescription": "ඔබ ඔබගේ මුරපදය ඉවත් කර ඇත.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "සම්බන්ධ වෙමින්...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "පෙනුම",
   "privacySettingsTitle": "පෞද්ගලිකත්වය",
   "notificationsSettingsTitle": "දැනුම්දීම්",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "ඔබගේ ප්‍රතිසාධන වාක්‍ය ඛණ්ඩය ඇතුලත් කරන්න",
   "displayNameEmpty": "කරුණාකර සංදර්ශක නාමයක් ඇතුළත් කරන්න",
+  "displayNameTooLong": "Display name is too long",
   "members": "සාමාජිකයින් $count$",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "කෙටි සමූහ නාමයක් ඇතුල් කරන්න",
   "pickClosedGroupMember": "කරුණාකර අවම වශයෙන් කණ්ඩායම් සාමාජිකයින් 1 දෙනෙකුවත් තෝරා ගන්න",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "අවහිර කළ සබඳතා නැත",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "නැත්නම් මේ එකකට එකතු වෙන්න...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "ඔබට $name$ එවන ලද මාධ්‍යය බාගැනීමට අවශ්‍ය බව විශ්වාසද?",
   "pinConversation": "පින් සංවාදය",
   "unpinConversation": "සංවාදය ඉවත් කරන්න",
+  "markUnread": "Mark Unread",
   "showUserDetails": "පරිශීලක විස්තර පෙන්වන්න",
   "sendRecoveryPhraseTitle": "ප්‍රතිසාධන වාක්‍ය ඛණ්ඩය යැවීම",
   "sendRecoveryPhraseMessage": "ඔබ ඔබේ ගිණුමට ප්‍රවේශ වීමට භාවිත කළ හැකි ඔබේ ප්‍රතිසාධන වාක්‍ය ඛණ්ඩය යැවීමට උත්සාහ කරයි. ඔබට මෙම පණිවිඩය යැවීමට අවශ්‍ය බව විශ්වාසද?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "ඔබට මෙම උපාංගයෙන් පමණක් දත්ත මැකීමට අවශ්‍යද?",
   "dialogClearAllDataDeletionFailedMultiple": "එම සේවා නෝඩ් මගින් මකා නොදැමූ දත්ත: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "ඔබට ඔබගේ උපාංග දත්ත පමණක් මැකීමට අවශ්‍ය බව විශ්වාසද?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "ඔබට රහස්‍යතා සැකසීම් තුළ 'හඬ සහ වීඩියෝ ඇමතුම්' අවසරය සබල කිරීමට අවශ්‍ය නිසා '$name$' වෙතින් ඇමතුම මඟ හැරී ඇත.",
   "callMissedNotApproved": "ඔබ තවමත් මෙම සංවාදය අනුමත කර නොමැති බැවින් '$name$' වෙතින් ඇමතුම මග හැරී ඇත. මුලින්ම ඔවුන්ට පණිවිඩයක් යවන්න.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "ඔබ $name$ඇමතුවා",
   "answeredACall": "$name$සමඟ අමතන්න",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "ඔබට නව මිතුරු ඉල්ලීමක් ඇත",
   "clearAllConfirmationTitle": "සියලුම පණිවිඩ ඉල්ලීම් හිස් කරන්න",
   "clearAllConfirmationBody": "ඔබට සියලු පණිවිඩ ඉල්ලීම් ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "සඟවන්න",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "ඔබගේ පණිවිඩ ඉල්ලීම එන ලිපි බලන්න",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
