--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Nalagam ...",
@@ -72,7 +72,7 @@
   "noSearchResults": "Ni rezultata za \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Stiki",
-  "messagesHeader": "Sporočila",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Nastavitve",
   "typingAlt": "Animacija tipkanja za ta pogovor",
   "contactAvatarAlt": "Avatar uporabnika $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Izbriši to sporočilo?",
   "deleteMessages": "Izbriši sporočila",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "To sporočilo je bilo izbrisano",
   "from": "Pošiljatelj",
@@ -107,29 +108,30 @@
   "sent": "Poslano",
   "received": "Prejeto",
   "sendMessage": "Pošlji sporočilo",
-  "groupMembers": "Člani skupine",
+  "groupMembers": "Members",
   "moreInformation": "Več informacij",
   "resend": "Ponovno pošlji",
   "deleteConversationConfirmation": "Ali res želite nepovratno izbrisati ta pogovor?",
   "clear": "Clear",
   "clearAllData": "Počisti vse podatke",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Ste prepričani, da želite trajno izbrisati pogovor?",
   "quoteThumbnailAlt": "Predogled slike citiranega sporočila",
   "imageAttachmentAlt": "Slika je priložena sporočilu",
-  "videoAttachmentAlt": "Zajem slike videa je priložen k sporočilu",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Slika je bila poslana tekom pogovora",
   "imageCaptionIconAlt": "Ikona, ki označuje, da ima ta slika besedilo",
   "addACaption": "Dodaj besedilo ...",
   "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Shrani",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Shrani",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -138,34 +140,34 @@
   "spellCheckDirty": "You must restart Session to apply your new settings",
   "readReceiptSettingDescription": "Send read receipts in one-to-one chats.",
   "readReceiptSettingTitle": "Read Receipts",
-  "typingIndicatorsSettingDescription": "See and share typing indicators in one-to-one chats.",
-  "typingIndicatorsSettingTitle": "Typing Indicators",
+  "typingIndicatorsSettingDescription": "Prikaži in deli indikatorje tipkanja v pogovorih ena na ena.",
+  "typingIndicatorsSettingTitle": "Indikator tipkanja",
   "zoomFactorSettingTitle": "Zoom Factor",
-  "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
-  "primaryColorGreen": "Primary color green",
-  "primaryColorBlue": "Primary color blue",
-  "primaryColorYellow": "Primary color yellow",
-  "primaryColorPink": "Primary color pink",
-  "primaryColorPurple": "Primary color purple",
-  "primaryColorOrange": "Primary color  orange",
+  "themesSettingTitle": "Teme",
+  "primaryColor": "Primarna barva",
+  "primaryColorGreen": "Primarna barva zelena",
+  "primaryColorBlue": "Primarna barva modra",
+  "primaryColorYellow": "Primarna barva rumena",
+  "primaryColorPink": "Primarna barva roza",
+  "primaryColorPurple": "Primarna barva vijolična",
+  "primaryColorOrange": "Primarna barva oranžna",
   "primaryColorRed": "Primary color red",
   "classicDarkThemeTitle": "Classic Dark",
   "classicLightThemeTitle": "Classic Light",
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "ime pošiljatelja in sporočilo",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "brez imena pošiljatelja in sporočila",
   "nameOnly": "samo ime pošiljatelja",
   "newMessage": "Novo sporočilo",
   "createConversationNewContact": "Create a conversation with a new contact",
   "createConversationNewGroup": "Create a group with existing contacts",
-  "joinACommunity": "Join a community",
+  "joinACommunity": "Pridruži se skupnosti",
   "chooseAnAction": "Choose an action to start a conversation",
   "newMessages": "Novo sporočilo",
   "notificationMostRecentFrom": "Najnovejše od:",
@@ -174,7 +176,7 @@
   "sendFailed": "Pošiljanje ni uspelo",
   "mediaMessage": "Multimedijsko sporočilo",
   "messageBodyMissing": "Please enter a message body.",
-  "messageBody": "Message body",
+  "messageBody": "Vsebina sporočila",
   "unblockToSend": "Za pošiljanje sporočila morate najprej odblokirati ta stik",
   "unblockGroupToSend": "Odblokiraj to skupino za pošiljanje sporočila.",
   "youChangedTheTimer": "Odštevanje za izginjajoča sporočila ste nastavili na $time$",
@@ -192,11 +194,12 @@
   "timerOption_12_hours": "12 ur",
   "timerOption_1_day": "1 dan",
   "timerOption_1_week": "1 teden",
+  "timerOption_2_weeks": "2 tedna",
   "disappearingMessages": "Izginjajoča sporočila",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "Spremeni vzdevek",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "Nov vzdevek",
+  "changeNicknameMessage": "Vstavi vzdevek za tega uporabnika",
   "timerOption_0_seconds_abbreviated": "Izključeno",
   "timerOption_5_seconds_abbreviated": "5 s",
   "timerOption_10_seconds_abbreviated": "10 s",
@@ -209,40 +212,41 @@
   "timerOption_12_hours_abbreviated": "12 h",
   "timerOption_1_day_abbreviated": "1 d",
   "timerOption_1_week_abbreviated": "1 t",
+  "timerOption_2_weeks_abbreviated": "2 ted.",
   "disappearingMessagesDisabled": "Izginjajoča sporočila so izključena",
-  "disabledDisappearingMessages": "Uporabnik $name$ je izključil izginjajoča sporočila",
+  "disabledDisappearingMessages": "Uporabnik $name$ je izključil izginjajoča sporočila.",
   "youDisabledDisappearingMessages": "Izključili ste izginjajoča sporočila",
   "timerSetTo": "Čas izginjanja je nastavljen na $time$",
   "noteToSelf": "Osebna zabeležka",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Začni nov pogovor ...",
-  "invalidNumberError": "Neveljavna številka",
+  "invalidNumberError": "Prosimo preveri Session ID ali ime ONS in poizkusi še enkrat",
   "failedResolveOns": "Failed to resolve ONS name",
-  "autoUpdateSettingTitle": "Auto Update",
-  "autoUpdateSettingDescription": "Automatically check for updates on startup.",
+  "autoUpdateSettingTitle": "Samodejno posodobi",
+  "autoUpdateSettingDescription": "Ob zagonu samodejno preveri za posodobitve.",
   "autoUpdateNewVersionTitle": "Na voljo je posodobitev aplikacije Session",
   "autoUpdateNewVersionMessage": "Na voljo je nova različica aplikacije Session.",
   "autoUpdateNewVersionInstructions": "Za uveljavitev nadgradenj pritisnite tipko Ponovno zaženi Session",
   "autoUpdateRestartButtonLabel": "Ponovno zaženi Session",
   "autoUpdateLaterButtonLabel": "Kasneje",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "Prenesi",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "Ali želite prenesti posodobitev?",
   "leftTheGroup": "Uporabnik $name$ je zapustil skupino",
   "multipleLeftTheGroup": "Uporabnik $name$ je zapustil skupino",
   "updatedTheGroup": "Skpina je bila posodobljena",
   "titleIsNow": "Novo ime je '$name$'",
   "joinedTheGroup": "Uporabnik $name$ se je pridružil skupini",
   "multipleJoinedTheGroup": "Uporabnik $names$ se je pridružil skupini",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
-  "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
-  "unblocked": "Unblocked",
-  "blocked": "Blocked",
-  "blockedSettingsTitle": "Blocked Contacts",
-  "conversationsSettingsTitle": "Conversations",
+  "kickedFromTheGroup": "$name$ je bil_a odstranjen_a iz skupine.",
+  "multipleKickedFromTheGroup": "$name$ so bili odstranjeni iz skupine.",
+  "block": "Block",
+  "unblock": "Unblock",
+  "unblocked": "Odblokiran",
+  "blocked": "Blokiran",
+  "blockedSettingsTitle": "Blokirani stiki",
+  "conversationsSettingsTitle": "Pogovori",
   "unbanUser": "Unban User",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
@@ -260,17 +264,17 @@
   "failedToAddAsModerator": "Failed to add user as admin",
   "failedToRemoveFromModerator": "Failed to remove user from the admin list",
   "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
-  "editGroup": "Edit group",
-  "editGroupName": "Edit group name",
-  "updateGroupDialogTitle": "Updating $name$...",
-  "showRecoveryPhrase": "Recovery Phrase",
+  "selectMessage": "Izberi sporočilo",
+  "editGroup": "Uredi skupino",
+  "editGroupName": "Uredi ime skupine",
+  "updateGroupDialogTitle": "Posodabljanje $name$...",
+  "showRecoveryPhrase": "Besedna zveza za obnovitev",
   "yourSessionID": "Your Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Change Account Password",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Remove Account Password",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
-  "copiedToClipboard": "Copied to clipboard",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Password",
   "setPassword": "Set Password",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Passwords do not match",
   "changePasswordInvalid": "The old password you entered is incorrect",
   "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Connecting...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Appearance",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ members",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "No blocked contacts",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Or join one of these...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Pin Conversation",
   "unpinConversation": "Unpin Conversation",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Show User Details",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
