--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Приєднатися до $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Не вдалося знайти відповідний сервер opengroup",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Введіть ID сесії або ONS",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Оновлення…",
@@ -72,7 +72,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Контакти та Групи",
   "contactsHeader": "Контакти",
-  "messagesHeader": "Повідомлення",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Параметри",
   "typingAlt": "Анімація вводу для цієї розмови",
   "contactAvatarAlt": "Аватар для контакту $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Видалити ${ count } повідомлень?",
   "deleteMessageQuestion": "Видалити це повідомлення?",
   "deleteMessages": "Видалити повідомлення",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ вилучено",
   "messageDeletedPlaceholder": "Повідомлення видалено",
   "from": "Від",
@@ -107,29 +108,30 @@
   "sent": "Надіслано",
   "received": "Отримано",
   "sendMessage": "Надіслати повідомлення",
-  "groupMembers": "Члени групи",
+  "groupMembers": "Members",
   "moreInformation": "Дізнатися більше",
   "resend": "Надіслати повторно",
   "deleteConversationConfirmation": "Видалити цю розмову без можливості відновлення?",
   "clear": "Clear",
   "clearAllData": "Очистити всі дані",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Ви дійсно хочете видалити цю бесіду?",
   "quoteThumbnailAlt": "Мініатюра зображення цитованого повідомлення",
   "imageAttachmentAlt": "Зображення, прикріплене до повідомлення",
-  "videoAttachmentAlt": "Скріншот з відео, прикріпленого до повідомлення",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Зображення відправлено в бесіді",
   "imageCaptionIconAlt": "Іконка, яка вказує на те, що це зображення має текстовий підпис",
   "addACaption": "Додайте підпис...",
   "copySessionID": "Скопіювати ідентифікатор Session",
-  "copyOpenGroupURL": "Скопіювати URL групи",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Зберегти",
   "saveLogToDesktop": "Зберегти журнал на робочий стіл",
   "saved": "Збережено",
   "tookAScreenshot": "$name$ зробив знімок екрану",
   "savedTheFile": "$name$ зберіг медіафайл",
   "linkPreviewsTitle": "Надсилати попередній перегляд посилань",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "У вас не буде повного захисту метаданих при надсиланні попереднього перегляду посилань.",
   "mediaPermissionsTitle": "Мікрофон",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Індикатор набору тексту",
   "zoomFactorSettingTitle": "Коефіцієнт масштабування",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Увімкнути",
   "keepDisabled": "Лишити вимкненим",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Ім'я відправника і повідомлення",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Нічого",
   "nameOnly": "Тільки ім'я відправника",
   "newMessage": "Нове Повідомлення",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 годин",
   "timerOption_1_day": "1 день",
   "timerOption_1_week": "1 тиждень",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Зникаючі повідомлення ",
   "changeNickname": "Змінити нікнейм",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12г",
   "timerOption_1_day_abbreviated": "1д",
   "timerOption_1_week_abbreviated": "1т",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Зникаючі повідомлення заборонені",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "Таймер встановленно на $time$",
   "noteToSelf": "Замітка для себе",
   "hideMenuBarTitle": "Сховати панель меню",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Почати нову розмову…",
-  "invalidNumberError": "Невірний номер",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Не вдалося отримати назву ONS",
   "autoUpdateSettingTitle": "Автоматичне оновлення",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ приєдналися до групи",
   "kickedFromTheGroup": "$name$ було вилучено із групи.",
   "multipleKickedFromTheGroup": "$name$ були вилучені із групи.",
-  "blockUser": "Заблокувати",
-  "unblockUser": "Розблокувати",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Розблоковано",
   "blocked": "Заблоковано",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Оновлення $name$...",
   "showRecoveryPhrase": "Фраза відновлення",
   "yourSessionID": "Ваша Session ID адресса",
-  "setAccountPasswordTitle": "Встановити пароль облікового запису",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Змінити пароль до профілю",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Видалити пароль акаунта",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Будь ласка, введіть ваш пароль",
   "confirmPassword": "Підтвердіть пароль",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Будь ласка, введіть ваш пароль",
   "recoveryPhraseSavePromptMain": "Ваша фраза відновлення - це головний ключ до вашогї Session ID адреси - ви можете використовувати її для відновлення вашої Session ID адреси якщо ви втратите доступ до пристрою. Запишіть на папері та зберігайте вашу фразу відновлення у безпечному місці і не дайте її нікому.",
   "invalidOpenGroupUrl": "Недійсне URL посилання",
-  "copiedToClipboard": "Скопійовано до буфера обміну",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Пароль",
   "setPassword": "Встановити пароль",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Паролі не співпадають",
   "changePasswordInvalid": "Старий пароль введений невірно",
   "removePasswordInvalid": "Неправильний пароль",
-  "setPasswordTitle": "Встановити пароль",
-  "changePasswordTitle": "Змінений пароль",
-  "removePasswordTitle": "Видалений пароль",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Ваш пароль встановлено. Будь ласка, збережіть його в безпеці.",
   "changePasswordToastDescription": "Ваш пароль змінено. Будь ласка, збережіть його в безпеці.",
-  "removePasswordToastDescription": "Ви видалили свій пароль.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Підключення...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Зовнішній вигляд",
   "privacySettingsTitle": "Конфіденційність",
   "notificationsSettingsTitle": "Сповіщення",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Введіть вашу фразу відновлення",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ учасників",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Будь ласка, введіть коротше ім'я групи",
   "pickClosedGroupMember": "Будь ласка виберіть принаймні 1 учасника групи",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Немає заблокованих контактів",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Або приєднуйтесь до одного з цих...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Ви впевнені що хочете завантажити медіафайл відправлений $name$?",
   "pinConversation": "Закріпити розмову",
   "unpinConversation": "Відкріпити розмову",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Показати деталі користувача",
   "sendRecoveryPhraseTitle": "Надсилання фрази відновлення",
   "sendRecoveryPhraseMessage": "Ви намагаєтеся надіслати фразу відновлення, яку можна використати для доступу до вашого облікового запису. Ви впевнені, що хочете надіслати це повідомлення?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Видалити дані лише з цього пристрою?",
   "dialogClearAllDataDeletionFailedMultiple": "Дані не видалено цими сервісними вузлами: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Ви впевнені, що хочете видалити лише дані свого пристрою?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Пропущений виклик від $name$, тому що вам потрібно ввімкнути дозвіл на голосові та відеодзвінки в параметрах конфіденційності.",
   "callMissedNotApproved": "Пропущений виклик від $name$ оскільки ви ще не схвалили цю розмову. Спочатку надішліть їм повідомлення.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Ви дзвонили $name$",
   "answeredACall": "Дзвінок з $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "У вас є новий запит у друзі",
   "clearAllConfirmationTitle": "Очистити всі запити",
   "clearAllConfirmationBody": "Ви впевнені, що бажаєте очистити всі запити на повідомлення?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Приховати",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "Перегляд папки вхідних повідомлень",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
