--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -28,19 +28,19 @@
   "viewMenuToggleFullScreen": "Bật/Tắt toàn màn hình",
   "viewMenuToggleDevTools": "Bật/Tắt Công Cụ Nhà Phát Triển",
   "contextMenuNoSuggestions": "Không có đề xuất",
-  "openGroupInvitation": "Community invitation",
+  "openGroupInvitation": "Lời mời tham gia nhóm",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Tham gia vào $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Bạn có chắc bạn muốn tham gia vào nhóm mở $roomName$ ?",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Nhập Session ID hoặc tên OSN",
-  "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
+  "startNewConversationBy...": "Bắt đầu cuộc trò chuyện mới bằng cách nhập ID phiên của ai đó hoặc chia sẻ ID phiên của bạn với họ.",
   "loading": "Đang tải...",
   "done": "Xong",
   "youLeftTheGroup": "Bạn đã rời nhóm.",
   "youGotKickedFromGroup": "Bạn đã bị xoá khỏi nhóm.",
   "unreadMessages": "Các tin nhắn chưa đọc",
   "debugLogExplanation": "Nhật ký này sẽ được lưu ở màn hình chính.",
-  "reportIssue": "Report a Bug",
+  "reportIssue": "Báo cáo lỗi",
   "markAllAsRead": "Đánh dấu tất cả là đã đọc",
   "incomingError": "Lỗi xử lí tin nhắn mới nhận",
   "media": "Đa phương tiện",
@@ -62,7 +62,7 @@
   "unableToLoadAttachment": "Xin lỗi, có lỗi thiết đặt tập tin đính kèm của bạn.",
   "offline": "Ngoại tuyến",
   "debugLog": "Nhật ký sửa lỗi",
-  "showDebugLog": "Export Logs",
+  "showDebugLog": "Xuất nhật ký",
   "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
   "goToReleaseNotes": "Đi tới các ghi chú phát hành",
   "goToSupportPage": "Đi đến trang Hỗ trợ",
@@ -72,7 +72,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Các liên hệ và nhóm",
   "contactsHeader": "Liên hệ",
-  "messagesHeader": "Tin nhắn",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Cài đặt",
   "typingAlt": "Hoạt ảnh đánh chữ cho cuộc trò chuyện này",
   "contactAvatarAlt": "Ảnh cá nhân cho liên hệ: $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Xóa $count$ tin nhắn đã chọn?",
   "deleteMessageQuestion": "Xoá tin nhắn này?",
   "deleteMessages": "Xóa tin nhắn",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Tin nhắn này đã bị xóa",
   "from": "Từ:",
@@ -107,29 +108,30 @@
   "sent": "Đã gửi",
   "received": "Đã nhận",
   "sendMessage": "Gửi tin nhắn",
-  "groupMembers": "Thành viên trong nhóm",
+  "groupMembers": "Members",
   "moreInformation": "Thông tin chi tiết",
   "resend": "Gửi lại",
   "deleteConversationConfirmation": "Xóa cuộc trò chuyện này vĩnh viễn?",
   "clear": "Clear",
   "clearAllData": "Xóa tất cả dữ liệu",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Bạn có chắc chắn rằng bạn muốn xoá cuộc hội thoại này không?",
   "quoteThumbnailAlt": "Ảnh xem trước của tin nhắn trích dẫn",
   "imageAttachmentAlt": "Hình ảnh đã được đính kèm trong tin nhắn",
-  "videoAttachmentAlt": "Ảnh chụp màn hình video được đính kèm từ tin nhắn",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Hình ảnh được gửi trong cuộc trò chuyện",
   "imageCaptionIconAlt": "Biểu tượng cho thấy hình ảnh này có chú thích",
   "addACaption": "Thêm mô tả...",
   "copySessionID": "Sao chép Session ID",
-  "copyOpenGroupURL": "Sao chép URL nhóm",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Lưu",
   "saveLogToDesktop": "Lưu nhật ký vào máy",
   "saved": "Đã lưu",
   "tookAScreenshot": "$name$ đã chụp màn hình",
   "savedTheFile": "Phương tiện được lưu bởi $name$",
   "linkPreviewsTitle": "Gửi đường dẫn xem trước",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "Bạn sẽ không được bảo vệ siêu dữ liệu đầy đủ khi gửi bản xem trước liên kết.",
   "mediaPermissionsTitle": "Micrô",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Cả tên người gửi lẫn tin nhắn",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Không hiện tên cũng như tin nhắn",
   "nameOnly": "Chỉ tên người gửi",
   "newMessage": "Tin nhắn mới",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 tiếng",
   "timerOption_1_day": "1 ngày",
   "timerOption_1_week": "1 tuần",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Xóa (tự động) tin nhắn",
   "changeNickname": "Đổi biệt danh",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12 giờ",
   "timerOption_1_day_abbreviated": "1 ngày",
   "timerOption_1_week_abbreviated": "1 tuần",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Chế độ tin nhắn tự huỷ đã tắt",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "Thời gian thiết lập đến $time$",
   "noteToSelf": "Ghi chú bản thân",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start new conversation…",
-  "invalidNumberError": "Số không chính xác",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Tự động cập nhật",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$name$ đã tham gia nhóm.",
   "kickedFromTheGroup": "$name$ đã bị xoá khỏi nhóm.",
   "multipleKickedFromTheGroup": "$name$ đã bị xoá khỏi nhóm.",
-  "blockUser": "Chặn",
-  "unblockUser": "Không chặn",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Bỏ chặn",
   "blocked": "Đã chặn",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Cập nhật $name$...",
   "showRecoveryPhrase": "Cụm từ khôi phục",
   "yourSessionID": "Session ID của bạn",
-  "setAccountPasswordTitle": "Đặt mật khẩu tài khoản",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Đổi mật khẩu tài khoản",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Xoá mật khẩu tài khoản",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Vui lòng nhập mật khẩu",
   "confirmPassword": "Xác nhận mật khẩu",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Vui lòng nhập mật khẩu",
   "recoveryPhraseSavePromptMain": "Cụm từ khôi phục của bạn là chìa khoá chủ cho Session ID của bạn — bạn có thể sử dụng nó để khôi phục Session ID khi bị mất tiếp cận với thiết bị của bạn. Hãy lưu cụm từ khôi phục của bạn ở một nơi an toàn và không cung cấp cho bất kì ai.",
   "invalidOpenGroupUrl": "URL không hợp lệ",
-  "copiedToClipboard": "Sao chép vào bộ nhớ tạm",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Mật khẩu",
   "setPassword": "Đặt mật khẩu",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Mật khẩu không khớp",
   "changePasswordInvalid": "Mật khẩu cũ chưa đúng",
   "removePasswordInvalid": "Mật khẩu không chính xác",
-  "setPasswordTitle": "Thiết lập mật khẩu",
-  "changePasswordTitle": "Đổi mật khẩu thành công",
-  "removePasswordTitle": "Xóa mật khẩu thành công",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Mật khẩu của bạn đã được đặt. Hãy giữ nó cẩn thận.",
   "changePasswordToastDescription": "Mật khẩu của bạn đã được đổi. Hãy giữ nó cẩn thận.",
-  "removePasswordToastDescription": "Bạn đã xoá mật khẩu của bạn.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Đang kết nối...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Diện mạo",
   "privacySettingsTitle": "Riêng tư",
   "notificationsSettingsTitle": "Thông báo",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Nhập cụm từ khôi phục của bạn.",
   "displayNameEmpty": "Vui lòng chọn một tên hiển thị",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ members",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Vui lòng nhập một tên nhóm ngắn hơn",
   "pickClosedGroupMember": "Vui lòng chọn ít nhất 2 thành viên trong nhóm",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "No blocked contacts",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Or join one of these...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Bạn có chắc bạn muốn tải tệp đa phương tiện gửi bởi $name$?",
   "pinConversation": "Ghim cuộc trò chuyện",
   "unpinConversation": "Bỏ ghim cuộc trò chuyện",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Hiện thông tin người dùng",
   "sendRecoveryPhraseTitle": "Đang gửi vế phục hồi",
   "sendRecoveryPhraseMessage": "Bạn đang chuẩn bị gởi vế khôi phục của bạn dùng vào mục đích truy cập tài khoản của bạn. Bạn có chắc bạn muốn gửi tin nhắn này?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Bạn có muốn xoá dữ liệu chỉ thiết bị này?",
   "dialogClearAllDataDeletionFailedMultiple": "Dữ liệu xoá không thành công bởi các Node Dịch vụ: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Bạn có chắc bạn muốn xoá chỉ dữ liệu từ thiết bị của bạn?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Cuộc gọi từ '$name$' bị nhỡ vì bạn chưa cho phép quyền truy cập 'Gọi giọng nói và video' trong mục Cài đặt Quyền riêng tư.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Bạn đã gọi $name$",
   "answeredACall": "Call with $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
