--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Uneix-t'hi $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Introdueix Session ID o nom ONS",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "S'està carregant...",
@@ -72,7 +72,7 @@
   "noSearchResults": "No hi ha cap resultat per a \"$searchTerm$\".",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contactes",
-  "messagesHeader": "Missatges",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Configuració",
   "typingAlt": "Animació d'escriptura per a aquesta conversa",
   "contactAvatarAlt": "Avatar per al contacte $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Suprimeix els missatges",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "De",
@@ -107,29 +108,30 @@
   "sent": "Enviament",
   "received": "Rebut",
   "sendMessage": "Envia un missatge",
-  "groupMembers": "Membres del grup",
+  "groupMembers": "Members",
   "moreInformation": "Més informació",
   "resend": "Reenviar",
   "deleteConversationConfirmation": "Voleu suprimir aquesta conversa de forma permanent?",
   "clear": "Clear",
   "clearAllData": "Esborrar totes les dades",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Estàs segur que vols esborrar aquesta conversa?",
   "quoteThumbnailAlt": "Miniatura d'una imatge d'un missatge citat",
   "imageAttachmentAlt": "Imatge adjunta al missatge",
-  "videoAttachmentAlt": "Captura de pantalla d'un vídeo adjuntat al missatge",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "S'ha enviat una imatge a la conversa",
   "imageCaptionIconAlt": "Icona que mostra que aquesta imatge té un títol",
   "addACaption": "Afegiu-hi un títol...",
   "copySessionID": "Copia l'ID de Session",
-  "copyOpenGroupURL": "Copia l'URL del grup",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Desa",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Desat",
   "tookAScreenshot": "$name$ ha fet una captura de pantalla",
   "savedTheFile": "Mèdia desada per $name$",
   "linkPreviewsTitle": "Envia previsualitzacions d'enllaços",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Indicadors de tecleig",
   "zoomFactorSettingTitle": "Factor de zoom",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "El nom de l'emissor i el missatge",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Ni el nom de l'emissor ni el missatge",
   "nameOnly": "Només el nom de l'emissor",
   "newMessage": "Missatge nou",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 hores",
   "timerOption_1_day": "1 dia",
   "timerOption_1_week": "1 setmana",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Missatges efímers",
   "changeNickname": "Canvia sobrenom",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12 h",
   "timerOption_1_day_abbreviated": "1 dia",
   "timerOption_1_week_abbreviated": "1 set",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "S'han desactivat els missatges efímers",
-  "disabledDisappearingMessages": "$name$ ha inhabilitat els missatges efímers.",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Heu desactivat els missatges efímers",
   "timerSetTo": "Temporitzador establert a $time$",
   "noteToSelf": "Notifica-m'ho",
   "hideMenuBarTitle": "Amaga la barra de menú",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Comença una conversa nova...",
-  "invalidNumberError": "El número no és vàlid",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "No s'ha pogut resoldre el nom ONS",
   "autoUpdateSettingTitle": "Actualització automàtica",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ s'ha unit al grup",
   "kickedFromTheGroup": "$name$ s'ha suprimit del grup.",
   "multipleKickedFromTheGroup": "$name$ s'ha suprimit del grup.",
-  "blockUser": "Bloca",
-  "unblockUser": "Desbloquejar",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Desbloquejat",
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Actualitzant $name$...",
   "showRecoveryPhrase": "Frase de recuperació",
   "yourSessionID": "La teva ID de Session",
-  "setAccountPasswordTitle": "Defineix una contrasenya per al compte",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Canviar contrasenya del compte",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Elimina la contrasenya del compte",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Si us plau, introdueix la teva contrasenya",
   "confirmPassword": "Confirma la contrasenya",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Si us plau, introdueix la teva contrasenya",
   "recoveryPhraseSavePromptMain": "La teva frase de recuperació és la clau principal del teu ID de Session — pots fer-la servir per a restaurar la teva ID de Session si perds l'accés al dispositiu. Emmagatzema la frase de recuperació en un lloc segur i no la donis a ningú.",
   "invalidOpenGroupUrl": "La URL no és vàlida",
-  "copiedToClipboard": "Copiat al porta-retalls",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Contrasenya",
   "setPassword": "Establir contrasenya",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Les contrassenyes no coincideixen",
   "changePasswordInvalid": "La contrasenya antiga que has introduït és incorrecta",
   "removePasswordInvalid": "Contrasenya incorrecta",
-  "setPasswordTitle": "Establir contrasenya",
-  "changePasswordTitle": "Canvia la contrasenya",
-  "removePasswordTitle": "Contrasenya suprimida",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "La vostra contrasenya s'ha definit. Mantingueu-la segura.",
   "changePasswordToastDescription": "La vostra contrasenya s'ha definit. Mantingueu-la segura.",
-  "removePasswordToastDescription": "Has eliminat la teva contrasenya.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Connectant...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Aparença",
   "privacySettingsTitle": "Privadesa",
   "notificationsSettingsTitle": "Notificacions",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Introdueix la frase de recuperació",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ membres",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Introdueix un nom de grup mes curt",
   "pickClosedGroupMember": "Com a mínim, tria 1 membre per al grup, si us plau",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "No hi ha contactes bloquejats",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "O uneix-te a alguns d'aquests...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Pin Conversation",
   "unpinConversation": "Unpin Conversation",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Show User Details",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
