--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Deltag i $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Kunne ikke finde den tilsvarende offentlige-server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Indtast Sessions-id eller ONS-navn",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Indlæser...",
@@ -72,7 +72,7 @@
   "noSearchResults": "Ingen resultater for \"$searchTerm$\"",
   "conversationsHeader": "Kontakter og grupper",
   "contactsHeader": "Kontakter",
-  "messagesHeader": "Beskeder",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Indstillinger",
   "typingAlt": "Skrive animation for denne samtale",
   "contactAvatarAlt": "Avatar for kontakt $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Slet $count$ beskeder?",
   "deleteMessageQuestion": "Slet denne besked?",
   "deleteMessages": "Slet beskeder",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ slettet",
   "messageDeletedPlaceholder": "Denne besked er slettet",
   "from": "Fra",
@@ -107,29 +108,30 @@
   "sent": "Sendt",
   "received": "Modtaget",
   "sendMessage": "Send en besked",
-  "groupMembers": "Gruppemedlemmer",
+  "groupMembers": "Members",
   "moreInformation": "Mere information",
   "resend": "Send igen",
   "deleteConversationConfirmation": "Slet samtale permanent?",
   "clear": "Clear",
   "clearAllData": "Slet alle data",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Er du sikker på, at du vil slette denne samtale?",
   "quoteThumbnailAlt": "Miniatur af billede fra citeret besked",
   "imageAttachmentAlt": "Billede vedhæftet til beskeden",
-  "videoAttachmentAlt": "Skærmbillede af video knyttet til beskeden",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Billede sendt i samtale",
   "imageCaptionIconAlt": "Ikon, der viser, at dette billede har en billedtekst",
   "addACaption": "Tilføj en billedtekst...",
   "copySessionID": "Kopier Session ID",
-  "copyOpenGroupURL": "Kopier Gruppe URL",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Gem",
   "saveLogToDesktop": "Gemt til desktop",
   "saved": "Gemt",
   "tookAScreenshot": "$name$ kopierede skærmbillede",
   "savedTheFile": "Medie gemt af $name$",
   "linkPreviewsTitle": "Send Link Preview",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "Du har ikke fuld beskyttelse af metadata når du sender link previews.",
   "mediaPermissionsTitle": "Mikrofon",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Skrive indikator",
   "zoomFactorSettingTitle": "Zoomfaktor",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Aktivér",
   "keepDisabled": "Forbliv deaktiveret",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Både navn og besked",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Hverken navn eller besked",
   "nameOnly": "Kun navn",
   "newMessage": "Ny besked",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 timer",
   "timerOption_1_day": "1 dag",
   "timerOption_1_week": "1 uge",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Beskeder der forsvinder",
   "changeNickname": "Ændre dit brugernavn",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12t",
   "timerOption_1_day_abbreviated": "1d",
   "timerOption_1_week_abbreviated": "1u",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Forsvindende beskeder slået fra",
-  "disabledDisappearingMessages": "$name$ slog forsvindende beskeder fra",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Du slog forsvindende beskeder fra",
   "timerSetTo": "Timer sat til $time$",
   "noteToSelf": "Note til dig selv",
   "hideMenuBarTitle": "Skjul Menulinje",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start ny samtale...",
-  "invalidNumberError": "Ugyldigt nummer",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Kunne ikke finde ONS navn",
   "autoUpdateSettingTitle": "Auto Opdatér",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ tilsluttede sig gruppen",
   "kickedFromTheGroup": "$name$ blev fjernet fra gruppen.",
   "multipleKickedFromTheGroup": "$name$ er blevet fjernet fra gruppen.",
-  "blockUser": "Blokér",
-  "unblockUser": "Fjern blokering",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Afblokeret",
   "blocked": "Blokeret",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Opdaterer $name$...",
   "showRecoveryPhrase": "Gendannelsesssætning",
   "yourSessionID": "Din Session ID",
-  "setAccountPasswordTitle": "Opret Kontor kodeord",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Skift kontoadgangskode",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Fjern konto kodeord",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Indtast venligst din adgangskode",
   "confirmPassword": "Bekræft kodeord",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Indtast dit kodeord",
   "recoveryPhraseSavePromptMain": "Din gendannelsesfrase er hovednøglen til dit Session ID - du kan bruge den til at gendanne dit Session ID, hvis du mister adgangen til din enhed. Opbevar din gendannelsesfrase et sikkert sted, og giv den ikke til nogen.",
   "invalidOpenGroupUrl": "Ugyldig URL",
-  "copiedToClipboard": "Kopieret til udklipsholderen",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Adgangskode",
   "setPassword": "Indstil adgangskode",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Adgangskoder matcher ikke",
   "changePasswordInvalid": "Den gamle adgangskode du indtastede var ugyldig",
   "removePasswordInvalid": "Forkert adgangskode",
-  "setPasswordTitle": "Indstil adgangskode",
-  "changePasswordTitle": "Ændret adgangskode",
-  "removePasswordTitle": "Fjernet adgangskoden",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Din adgangskode er blevet indstillet. Venligst hold den sikker.",
   "changePasswordToastDescription": "Din adgangskode er blevet ændret. Venligst hold den sikker.",
-  "removePasswordToastDescription": "Du har fjernet din adgangskode.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Forbinder...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Udseende",
   "privacySettingsTitle": "Privatliv",
   "notificationsSettingsTitle": "Notifikationer",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Angiv din hemmelige gendannelsessætning",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ medlemmer",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Indtast venligst et kortere gruppenavn",
   "pickClosedGroupMember": "Vælg venligst mindst 1 gruppemedlem",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Ingen blokerede kontakter",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Eller deltag i en af disse...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Er du sikker på du vil downloade medier sendt af $name$?",
   "pinConversation": "Fastgør samtale",
   "unpinConversation": "Frigør samtale",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Vis bruger detaljer",
   "sendRecoveryPhraseTitle": "Sender Gendannelsessætning",
   "sendRecoveryPhraseMessage": "Du forsøger at sende din gendannelsessætning, som kan bruges til at få adgang til din konto. Er du sikker på, at du vil sende denne besked?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Vil du slette data fra denne enhed?",
   "dialogClearAllDataDeletionFailedMultiple": "Data ikke slettet af disse Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Er du sikker på, at du kun vil slette dine enhedsdata?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Du ringede til $name$",
   "answeredACall": "Opkald med $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
