--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Pridruži se $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Unesite ID sesije ili naziv ONS -a",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Učitavanje...",
@@ -72,7 +72,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Контакти",
-  "messagesHeader": "Поруке",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Podešavanja",
   "typingAlt": "Unos animacije za ovaj razgovor",
   "contactAvatarAlt": "Avatar za kontakt $name$",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Izbriši ovu poruku?",
   "deleteMessages": "Уклони пошиљке",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "Poruka je izbrisana",
   "from": "Од",
@@ -107,29 +108,30 @@
   "sent": "Послата",
   "received": "Примљена",
   "sendMessage": "Пошаљи поруку",
-  "groupMembers": "Чланови групе",
+  "groupMembers": "Members",
   "moreInformation": "Više informacija",
   "resend": "Pošalji ponovo",
   "deleteConversationConfirmation": "Неопозиво уклонити преписку?",
   "clear": "Clear",
   "clearAllData": "Počisti sve podatke",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Jeste li sigurni da želite da izbrišete ovaj razgovor?",
   "quoteThumbnailAlt": "Sličica slike iz citirane poruke",
   "imageAttachmentAlt": "Fotografija je priložena uz poruku",
-  "videoAttachmentAlt": "Snimak ekrana video zapisa u prilogu poruke",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Slika je poslata u razgovoru",
   "imageCaptionIconAlt": "Ikona pokazuje da ova slika ima naslov",
   "addACaption": "Dodaj natpis...",
   "copySessionID": "Kreiraj Session ID",
-  "copyOpenGroupURL": "Kopiraj URL-ove grupa",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Сачувај",
   "saveLogToDesktop": "Sačuvati beleške na desktop",
   "saved": "Sačuvano",
   "tookAScreenshot": "$name$ je uradio screenshot",
   "savedTheFile": "Medij je sačuvao $name$",
   "linkPreviewsTitle": "Pošalji preglede veza",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "Nećete imati potpunu zaštitu metapodataka prilikom slanja pregleda linkova.",
   "mediaPermissionsTitle": "Mikrofon",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Indikatori pisanja",
   "zoomFactorSettingTitle": "Faktor zumiranja",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Име дописника и порука",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Скривено",
   "nameOnly": "Име дописника",
   "newMessage": "Нова порука",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 sati",
   "timerOption_1_day": "1 дан",
   "timerOption_1_week": "1 недеља",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Самонестајуће поруке",
   "changeNickname": "Promеni nadimak",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12 ч",
   "timerOption_1_day_abbreviated": "1 д",
   "timerOption_1_week_abbreviated": "1 нед",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Poruke koje nestaju su onemogućene",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "Рок постављен на $time$",
   "noteToSelf": "Napomena za sebe",
   "hideMenuBarTitle": "Sakrij meni",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start new conversation…",
-  "invalidNumberError": "Неисправан број",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Rešavanje ONSa nije uspelo",
   "autoUpdateSettingTitle": "Automatsko ažuriranje",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ joined the group",
   "kickedFromTheGroup": "$name$ je izbrisan iz grupe.",
   "multipleKickedFromTheGroup": "$name$ je izbrisan iz grupe.",
-  "blockUser": "Blokiraj korisnika",
-  "unblockUser": "Odblokirajte",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Odblokirajte",
   "blocked": "Blokiran",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Ažuriranje $name$...",
   "showRecoveryPhrase": "Fraza za oporavak",
   "yourSessionID": "Tvoj Session ID",
-  "setAccountPasswordTitle": "Podesite lozinku naloga",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Promenite lozinku naloga",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Uklonite lozinku za ovaj nalog",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Unesite lozinku",
   "confirmPassword": "Potvrda lozinke",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Unesite lozinku",
   "recoveryPhraseSavePromptMain": "Fraza za oporavak je glavni ključ za Session ID - možete ga koristiti za vraćanje ISession ID-a ako izgubite pristup svom uređaju. Čuvajte frazu za oporavak na sigurnom mestu i ne delite je nisakim.",
   "invalidOpenGroupUrl": "Neispravan URL",
-  "copiedToClipboard": "Kopirano u klipobord",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Lozinka",
   "setPassword": "Postavi lozinku",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Lozinke se ne poklapaju",
   "changePasswordInvalid": "Stara lozinka je neispravna",
   "removePasswordInvalid": "Pogrešna lozinka",
-  "setPasswordTitle": "Postavi lozinku",
-  "changePasswordTitle": "Promeni lozinku",
-  "removePasswordTitle": "Lozinka je uklonjena",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Vaša lozinka je podešena. Čuvajte lozinku na sigurnom.",
   "changePasswordToastDescription": "Vaša lozinka je podešena. Čuvajte lozinku na sigurnom.",
-  "removePasswordToastDescription": "Uklonili ste lozinku.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Povezivanje...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Izglеd",
   "privacySettingsTitle": "Privatnost",
   "notificationsSettingsTitle": "Notifikacije",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Unesite frazu za oporavak",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ korisnika",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Unesite kraći naziv grupe",
   "pickClosedGroupMember": "Molimo izaberite najmanje jednog člana grupe",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Nema blokiranih kontakata",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Ili se pridružite nekoj od ovih...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Da li ste sigurni da želite da preuzmete medije koje šalje $name$?",
   "pinConversation": "Zalepi konverzaciju na vrh",
   "unpinConversation": "Otkači konverzaciju sa vrha",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Pokaži detalje korisnika",
   "sendRecoveryPhraseTitle": "Slanje fraze za oporavak",
   "sendRecoveryPhraseMessage": "Pokušavate da pošaljete svoju frazu za oporavak koja se može koristiti za pristup vašem nalogu. Jeste li sigurni da želite poslati ovu poruku?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Da li želite da izbrišete podatke samo sa ovog uređaja?",
   "dialogClearAllDataDeletionFailedMultiple": "Podaci koje servisni čvorovi nisu izbrisali: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Jeste li sigurni da želite da izbrišete podatke samo sa urađaja?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Propušten poziv od $name$ jer morate da omogućite dozvolu za 'Glasovne i video pozive' u podešavanjima Privatnosti.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "Pozvali ste $name$",
   "answeredACall": "Poziv sa $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
