--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$ குழுவில் சேர வேண்டுமா?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "தொடர்புடைய திறந்த குழு சேவையகத்தைக் கண்டறிய முடியவில்லை",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "அமர்வு ஐடி அல்லது ஓஎன்எஸ் பெயரை உள்ளிடுக",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "ஏற்றபடுகின்றது...",
@@ -72,7 +72,7 @@
   "noSearchResults": "\"{$searchTerm$\" க்கான தேடல் முடிவுகள் எதுவும் இல்லை",
   "conversationsHeader": "தொடர்புகள் மற்றும் குழுக்கள்",
   "contactsHeader": "தொடர்புகள்",
-  "messagesHeader": "தகவல்கள்",
+  "messagesHeader": "Conversations",
   "settingsHeader": "அமைப்புகள்",
   "typingAlt": "இந்த உரையாடலுக்கான அனிமேஷன் தட்டச்சு",
   "contactAvatarAlt": "தொடர்பு $name$ க்கான அவதார்",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "தகவலைகலை நீக்கு",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "அனுப்புனர்:",
@@ -107,29 +108,30 @@
   "sent": "அனுப்பப்பட்டது",
   "received": "பெறப்பட்டது",
   "sendMessage": "செய்தி",
-  "groupMembers": "குழு ",
+  "groupMembers": "Members",
   "moreInformation": "மேற்கொண்ட தகவல்கள்",
   "resend": "மீண்டும் அனுப்பு",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clear": "Clear",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
-  "videoAttachmentAlt": "Screenshot of video attached to message",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Image sent in conversation",
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "Add a caption...",
   "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Save",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -142,7 +144,7 @@
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Name and content",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "No name or content",
   "nameOnly": "Name Only",
   "newMessage": "புதிய தகவல்",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 hours",
   "timerOption_1_day": "1 day",
   "timerOption_1_week": "1 week",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Disappearing messages",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12 மணி நேரம்",
   "timerOption_1_day_abbreviated": "1 நாள்",
   "timerOption_1_week_abbreviated": "1 வாரம்",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Disappearing messages disabled",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages.",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages.",
   "timerSetTo": "Disappearing message time set to $time$",
   "noteToSelf": "Note to Self",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start New Conversation",
-  "invalidNumberError": "Invalid Session ID or ONS Name",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$name$ joined the group.",
   "kickedFromTheGroup": "$name$ was removed from the group.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Unblocked",
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "Updating $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
   "yourSessionID": "Your Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Change Account Password",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Remove Account Password",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
-  "copiedToClipboard": "Copied to clipboard",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Password",
   "setPassword": "Set Password",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Passwords do not match",
   "changePasswordInvalid": "The old password you entered is incorrect",
   "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Connecting...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Appearance",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ members",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "No blocked contacts",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Or join one of these...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Pin Conversation",
   "unpinConversation": "Unpin Conversation",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Show User Details",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Hide",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "View your Message Request inbox",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
