--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -31,7 +31,7 @@
   "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$'e katıl?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
-  "couldntFindServerMatching": "İlgili opengroup sunucusu bulunamadı",
+  "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "enterSessionIDOrONSName": "Session Kimliğini veya ONS adını girin",
   "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Yükleniyor...",
@@ -40,7 +40,7 @@
   "youGotKickedFromGroup": "Gruptan atıldınız.",
   "unreadMessages": "Okunmamış İletiler",
   "debugLogExplanation": "Bu sistem günlüğü masaüstünüze kaydedilecektir.",
-  "reportIssue": "Report a Bug",
+  "reportIssue": "Bir Hata Bildir",
   "markAllAsRead": "Tümünü Okundu Olarak İşaretle",
   "incomingError": "Gelen ileti işlenirken hata oluştu",
   "media": "Medya",
@@ -62,7 +62,7 @@
   "unableToLoadAttachment": "Seçilen eklenti yüklenemedi.",
   "offline": "Çevrimdışı",
   "debugLog": "Hata Ayıklama Günlüğü",
-  "showDebugLog": "Export Logs",
+  "showDebugLog": "Günlüğu Dışa Aktar",
   "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
   "goToReleaseNotes": "Sürüm Notlarına Git",
   "goToSupportPage": "Destek Sayfasına Git",
@@ -72,7 +72,7 @@
   "noSearchResults": "\"$searchTerm$\" için arama sonucu yok",
   "conversationsHeader": "Arama sırasında çıkan Kişiler ve Gruplar bölümü başlığının sonuçları",
   "contactsHeader": "Kişiler",
-  "messagesHeader": "İletiler",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Ayarlar",
   "typingAlt": "Bu sohbet için yazma animasyonu",
   "contactAvatarAlt": "$name$ kişisinin avatarı",
@@ -100,6 +100,7 @@
   "deleteMessagesQuestion": "$count$ mesajı sil?",
   "deleteMessageQuestion": "Bu ileti silinsin mi?",
   "deleteMessages": "İletileri sil",
+  "deleteConversation": "Delete Conversation",
   "deleted": "$count$ silinmiş",
   "messageDeletedPlaceholder": "Bu ileti silindi",
   "from": "Gönderen",
@@ -107,29 +108,30 @@
   "sent": "Gönderildi",
   "received": "Alındı",
   "sendMessage": "İleti gönder",
-  "groupMembers": "Grup üyeleri",
+  "groupMembers": "Üyeler",
   "moreInformation": "Daha fazla bilgi",
   "resend": "Tekrar gönder",
   "deleteConversationConfirmation": "Bu sohbeti kalıcı olarak sil?",
-  "clear": "Clear",
+  "clear": "Temizle",
   "clearAllData": "Tüm Veriyi Temizle",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "Bu işlem mesajlarınızı ve kişilerinizi kalıcı olarak siler.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "Bu konuşmayı silmek istediğinizden emin misiniz?",
   "quoteThumbnailAlt": "Alıntılanmış iletideki görüntünün önizlemesi",
   "imageAttachmentAlt": "İletiye görüntü eklenmiş",
-  "videoAttachmentAlt": "İletiye eklenen videonun ekran görüntüsü",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Konuşmada gönderilen görüntü",
   "imageCaptionIconAlt": "Bu görüntünün başlığı olduğunu gösteren ikon",
   "addACaption": "Bir başlık ekleyin...",
   "copySessionID": "Session Kimliğini Kopyala",
-  "copyOpenGroupURL": "Grubun URL'sini Kopyala",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Kaydet",
   "saveLogToDesktop": "Günlüğü masaüstüne kaydet",
   "saved": "Kaydedildi",
   "tookAScreenshot": "$name$ ekran görüntüsü aldı",
   "savedTheFile": "Medya, $name$ tarafından kaydedildi",
   "linkPreviewsTitle": "Bağlantı Önizlemelerini Gönder",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "Bağlantı önizlemeleri gönderirken tamamıyla metaveri korumasına sahip olmazsınız.",
   "mediaPermissionsTitle": "Mikrofon",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -141,8 +143,8 @@
   "typingIndicatorsSettingDescription": "See and share typing indicators in one-to-one chats.",
   "typingIndicatorsSettingTitle": "Yazıyor Göstergesi",
   "zoomFactorSettingTitle": "Yakınlaştırma faktörü",
-  "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "themesSettingTitle": "Temalar",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -155,11 +157,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Etkinleştir",
   "keepDisabled": "Devre dışı tut",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Gönderenin adını ve iletisini",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "Ne gönderenin adını ne de iletisini",
   "nameOnly": "Sadece gönderenin adı",
   "newMessage": "Yeni İleti",
@@ -192,6 +194,7 @@
   "timerOption_12_hours": "12 saat",
   "timerOption_1_day": "1 gün",
   "timerOption_1_week": "1 hafta",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Kaybolan iletiler",
   "changeNickname": "Takma Adı Değiştir",
   "clearNickname": "Clear nickname",
@@ -209,15 +212,16 @@
   "timerOption_12_hours_abbreviated": "12s",
   "timerOption_1_day_abbreviated": "1g",
   "timerOption_1_week_abbreviated": "1h",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Kaybolan iletiler devre dışı",
-  "disabledDisappearingMessages": "$name$ kaybolan iletileri devre dışı bıraktı",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "Kaybolan iletileri devre dışı bıraktınız",
   "timerSetTo": "Zamanlayıcı $time$ olarak ayarlandı",
   "noteToSelf": "Kendime Not",
   "hideMenuBarTitle": "Menü Çubuğunu Gizle",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Yeni sohbet başlat…",
-  "invalidNumberError": "Geçersiz numara",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "ONS adını çözümlemede başarısız oldu",
   "autoUpdateSettingTitle": "Otomatik Güncelleme",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -237,8 +241,8 @@
   "multipleJoinedTheGroup": "$names$ gruba katıldı",
   "kickedFromTheGroup": "$name$, gruptan kaldırıldı.",
   "multipleKickedFromTheGroup": "$name$, gruptan çıkarıldı.",
-  "blockUser": "Engelle",
-  "unblockUser": "Engeli Kaldır",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Engel kaldırıldı",
   "blocked": "Engellendi",
   "blockedSettingsTitle": "Blocked Contacts",
@@ -266,11 +270,11 @@
   "updateGroupDialogTitle": "$name$ güncelleniyor...",
   "showRecoveryPhrase": "Kurtarma Sözcük Grubu",
   "yourSessionID": "Session Kimliğiniz",
-  "setAccountPasswordTitle": "Hesap Şifresini Belirleyin",
+  "setAccountPasswordTitle": "Password",
   "setAccountPasswordDescription": "Require password to unlock Session.",
-  "changeAccountPasswordTitle": "Hesap Şifresini Değiştir",
+  "changeAccountPasswordTitle": "Change Password",
   "changeAccountPasswordDescription": "Change the password required to unlock Session.",
-  "removeAccountPasswordTitle": "Hesap Şifresini Kaldır",
+  "removeAccountPasswordTitle": "Remove Password",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Lütfen şifrenizi girin",
   "confirmPassword": "Şifreyi Doğrula",
@@ -279,7 +283,7 @@
   "showRecoveryPhrasePasswordRequest": "Lütfen şifrenizi girin",
   "recoveryPhraseSavePromptMain": "Kurtarma ifadeniz Session ID'nizin asıl anahtarıdır; cihazınıza erişiminizi kaybederseniz Session ID'nizi geri yüklemek için bunu kullanabilirsiniz. Kurtarma ifadenizi güvenli bir yerde saklayın ve kimseye vermeyin.",
   "invalidOpenGroupUrl": "Geçersiz URL",
-  "copiedToClipboard": "Panoya kopyalandı",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Şifre",
   "setPassword": "Şifre Belirle",
@@ -295,12 +299,12 @@
   "setPasswordInvalid": "Şifreler uyuşmuyor",
   "changePasswordInvalid": "Girmiş olduğunuz eski parola yanlış",
   "removePasswordInvalid": "Yanlış şifre",
-  "setPasswordTitle": "Şifre Belirle",
-  "changePasswordTitle": "Şifre Değiştirildi",
-  "removePasswordTitle": "Şifre Kaldırıldı",
+  "setPasswordTitle": "Password Set",
+  "changePasswordTitle": "Password Changed",
+  "removePasswordTitle": "Password Removed",
   "setPasswordToastDescription": "Şifreniz ayarlandı. Lütfen güvende tutunuz.",
   "changePasswordToastDescription": "Şifreniz değiştirildi. Lütfen güvende tutunuz.",
-  "removePasswordToastDescription": "Şifrenizi sildiniz.",
+  "removePasswordToastDescription": "Your password has been removed.",
   "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Bağlanılıyor...",
@@ -355,11 +359,14 @@
   "appearanceSettingsTitle": "Görünüm",
   "privacySettingsTitle": "Gizlilik",
   "notificationsSettingsTitle": "Bildirimler",
+  "audioNotificationsSettingsTitle": "Audio Notifications",
   "notificationsSettingsContent": "Notification Content",
   "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Kurtarma metninizi girin",
   "displayNameEmpty": "Please pick a display name",
+  "displayNameTooLong": "Display name is too long",
   "members": "$count$ üye",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
@@ -373,7 +380,7 @@
   "invalidGroupNameTooLong": "Lütfen daha kısa bir grup ismi giriniz",
   "pickClosedGroupMember": "Lütfen en az 1 grup üyesi seçin",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "Engellenmiş kişi yok",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Ya da bunlardan birine katılın...",
@@ -406,6 +413,7 @@
   "trustThisContactDialogDescription": "$name$ tarafından gönderilen medyayı indirmek istediğine emin misin?",
   "pinConversation": "Konuşmayı sabitle",
   "unpinConversation": "Konuşmanın Sabitlemesini Kaldır",
+  "markUnread": "Mark Unread",
   "showUserDetails": "Kullanıcı Detaylarını Göster",
   "sendRecoveryPhraseTitle": "Kurtarma Sözcük Grubunu Gönder",
   "sendRecoveryPhraseMessage": "Hesabınıza erişmek için kullanılabilecek kurtarma ifadenizi göndermeye çalışıyorsunuz. Bu mesajı göndermek istediğinizden emin misiniz?",
@@ -414,6 +422,9 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Sadece cihazdan silmek ister misiniz?",
   "dialogClearAllDataDeletionFailedMultiple": "Bu Hizmet Düğümleri tarafından silinmeyen veriler: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "clearDevice": "Clear Device",
+  "tryAgain": "Try Again",
+  "areYouSureClearDevice": "Are you sure you want to clear your device?",
   "deviceOnly": "Clear Device Only",
   "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Sadece cihaz verisini silmek istediğinizden emin misiniz?",
@@ -453,7 +464,7 @@
   "callMissedCausePermission": "'$name$' tarafından cevaplanmayan çağrınız var çünkü Gizlilik Ayarlarında 'Sesli ve görüntülü aramalar' iznini etkinleştirmeniz gerekiyor.",
   "callMissedNotApproved": "Bu konuşmayı henüz onaylamadığınız için '$name$' adlı kişiden gelen arama cevapsız. Önce onlara mesaj at.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "$name$ kullanıcısını aradınız",
   "answeredACall": "$name$ ile ara",
@@ -475,11 +486,16 @@
   "youHaveANewFriendRequest": "Yeni bir arkadaşlık isteğin var",
   "clearAllConfirmationTitle": "Tüm Mesaj İsteklerini temizle",
   "clearAllConfirmationBody": "Tüm mesaj isteklerinizi silmek istediğinizden emin misiniz?",
+  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
+  "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
   "hideBanner": "Gizle",
+  "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "openMessageRequestInboxDescription": "Mesaj İstek kutunu görüntüle",
   "clearAllReactions": "Are you sure you want to clear all $emoji$ ?",
   "expandedReactionsText": "Show Less",
   "reactionNotification": "Reacts to a message with $emoji$",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ other",
   "otherPlural": "$number$ others",
   "reactionPopup": "reacted with",
